ruff formatting of experiments

--- a/examples/data_generation/LoopedGraphGenerator_example.ipynb
+++ b/examples/data_generation/LoopedGraphGenerator_example.ipynb
@@ -48,11 +48,10 @@
    ],
    "source": [
     "import os\n",
-    "import json\n",
     "from dotenv import load_dotenv\n",
     "from langchain_openai import ChatOpenAI\n",
     "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerator\n",
-    "from dialogue2graph import Dialogue, Graph\n",
+    "from dialogue2graph import Graph\n",
     "\n",
     "load_dotenv()"
    ]
@@ -71,15 +70,15 @@
    "outputs": [],
    "source": [
     "gen_model = ChatOpenAI(\n",
-    "    model='o1-mini',\n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
-    "    base_url=os.getenv(\"OPENAI_BASE_URL\")\n",
-    ")\n",
-    "val_model = ChatOpenAI(\n",
-    "    model='gpt-3.5-turbo',\n",
+    "    model=\"o1-mini\",\n",
     "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
     "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
-    "    temperature=0\n",
+    ")\n",
+    "val_model = ChatOpenAI(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0,\n",
     ")"
    ]
   },
@@ -182,7 +181,7 @@
     }
    ],
    "source": [
-    "generated_graph = gen.invoke(topic='travel booking')"
+    "generated_graph = gen.invoke(topic=\"travel booking\")"
    ]
   },
   {
@@ -209,7 +208,7 @@
     }
    ],
    "source": [
-    "graph = Graph(generated_graph[0]['graph'])\n",
+    "graph = Graph(generated_graph[0][\"graph\"])\n",
     "graph.visualise_short(\"Graph for 'travel booking' topic\")"
    ]
   },
