--- a/examples/data_generation/cache_example.ipynb
+++ b/examples/data_generation/cache_example.ipynb
@@ -57,13 +57,9 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import random\n",
-    "import json\n",
     "from dotenv import load_dotenv\n",
     "from langchain_openai import ChatOpenAI\n",
     "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerator\n",
-    "from dialogue2graph import Dialogue, Graph\n",
     "\n",
     "load_dotenv()"
    ]
@@ -74,8 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_model = ChatOpenAI(model='openai/o1-mini')\n",
-    "val_model = ChatOpenAI(model='openai/gpt-4o-mini')"
+    "gen_model = ChatOpenAI(model=\"openai/o1-mini\")\n",
+    "val_model = ChatOpenAI(model=\"openai/gpt-4o-mini\")"
    ]
   },
   {
@@ -105,7 +101,7 @@
    "source": [
     "# seed can be any integer, if the seed is the same, the output will be the same\n",
     "# If nothing or None is passed no cache will be used\n",
-    "gen.invoke(topic='antivirus software problems')"
+    "gen.invoke(topic=\"antivirus software problems\")"
    ]
   }
  ],
