--- a/examples/evaluation/evaluate_algorithm.ipynb
+++ b/examples/evaluation/evaluate_algorithm.ipynb
@@ -22,10 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import json\n",
     "from dotenv import load_dotenv\n",
-    "from langchain_openai import ChatOpenAI\n",
     "from dialogue2graph.pipelines.core.dialogue_sampling import RecursiveDialogueSampler\n",
     "from dialogue2graph import Dialogue, Graph\n",
     "\n",
@@ -38,11 +36,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../example_data.json', encoding='utf-8') as f:\n",
+    "with open(\"../example_data.json\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
-    "graph = Graph(graph_dict=data[0]['graph'])\n",
-    "dialogues = [Dialogue().from_list(x['messages']) for x in data[0]['dialogues']]"
+    "graph = Graph(graph_dict=data[0][\"graph\"])\n",
+    "dialogues = [Dialogue().from_list(x[\"messages\"]) for x in data[0][\"dialogues\"]]"
    ]
   },
   {
@@ -61,10 +59,7 @@
    "outputs": [],
    "source": [
     "x = await sampler.evaluate(\n",
-    "    graph=graph,\n",
-    "    target_dialogues=dialogues,\n",
-    "    upper_limit=10,\n",
-    "    report_type=\"dataframe\"\n",
+    "    graph=graph, target_dialogues=dialogues, upper_limit=10, report_type=\"dataframe\"\n",
     ")"
    ]
   },
