--- a/examples/pipeline_usage/pipeline_example.ipynb
+++ b/examples/pipeline_usage/pipeline_example.ipynb
@@ -61,9 +61,7 @@
     "ms = ModelStorage()\n",
     "ms.add(\n",
     "    \"my_model\",\n",
-    "    config={\n",
-    "        \"name\": \"gpt-3.5-turbo\"\n",
-    "    },\n",
+    "    config={\"name\": \"gpt-3.5-turbo\"},\n",
     "    model_type=\"llm\",\n",
     ")\n",
     "\n",
@@ -106,20 +104,23 @@
     }
    ],
    "source": [
-    "data = [{'text': 'Hey there! How can I help you today?',\n",
-    "    'participant': 'assistant'},\n",
-    "   {'text': 'I need to book a ride to the airport.', 'participant': 'user'},\n",
-    "   {'text': 'Sure! I can help with that. When is your flight, and where are you departing from?',\n",
-    "    'participant': 'assistant'},\n",
-    "   {'text': 'Do you have any other options?', 'participant': 'user'},\n",
-    "   {'text': \"If you'd prefer, I can send you options for ride-share services instead. Would you like that?\",\n",
-    "    'participant': 'assistant'},\n",
-    "   {'text': \"No, I'll manage on my own.\", 'participant': 'user'},\n",
-    "   {'text': 'No worries! Feel free to reach out anytime.',\n",
-    "    'participant': 'assistant'},\n",
-    "   {'text': 'Alright, thanks anyway.', 'participant': 'user'},\n",
-    "   {'text': \"You're welcome! Have a fantastic trip!\",\n",
-    "    'participant': 'assistant'}]\n",
+    "data = [\n",
+    "    {\"text\": \"Hey there! How can I help you today?\", \"participant\": \"assistant\"},\n",
+    "    {\"text\": \"I need to book a ride to the airport.\", \"participant\": \"user\"},\n",
+    "    {\n",
+    "        \"text\": \"Sure! I can help with that. When is your flight, and where are you departing from?\",\n",
+    "        \"participant\": \"assistant\",\n",
+    "    },\n",
+    "    {\"text\": \"Do you have any other options?\", \"participant\": \"user\"},\n",
+    "    {\n",
+    "        \"text\": \"If you'd prefer, I can send you options for ride-share services instead. Would you like that?\",\n",
+    "        \"participant\": \"assistant\",\n",
+    "    },\n",
+    "    {\"text\": \"No, I'll manage on my own.\", \"participant\": \"user\"},\n",
+    "    {\"text\": \"No worries! Feel free to reach out anytime.\", \"participant\": \"assistant\"},\n",
+    "    {\"text\": \"Alright, thanks anyway.\", \"participant\": \"user\"},\n",
+    "    {\"text\": \"You're welcome! Have a fantastic trip!\", \"participant\": \"assistant\"},\n",
+    "]\n",
     "graph = pipe.invoke(data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
