--- a/experiments/exp2025_03_04_load_real_datasets/exp2025_03_04_load_real_datasets/load_datasets.ipynb
+++ b/experiments/exp2025_03_04_load_real_datasets/exp2025_03_04_load_real_datasets/load_datasets.ipynb
@@ -21,9 +21,8 @@
     "\n",
     "\n",
     "class EnvSettings(BaseSettings, case_sensitive=True):\n",
-    "\n",
     "    model_config = SettingsConfigDict(env_file=\"./.env\", env_file_encoding=\"utf-8\")\n",
-    "    HUGGINGFACE_TOKEN: Optional[str]\n"
+    "    HUGGINGFACE_TOKEN: Optional[str]"
    ]
   },
   {
@@ -53,8 +52,10 @@
     "def load_dataset(name: str):\n",
     "    dataset_name = name.split(\"d2g://\")[-1]\n",
     "    print(dataset_name)\n",
-    "    os.environ['DATASET_PATH'] = SAVE_DIR+dataset_name\n",
-    "    dataset = datasets.load_dataset('./load_script.py', dataset_name, trust_remote_code=True)\n",
+    "    os.environ[\"DATASET_PATH\"] = SAVE_DIR + dataset_name\n",
+    "    dataset = datasets.load_dataset(\n",
+    "        \"./load_script.py\", dataset_name, trust_remote_code=True\n",
+    "    )\n",
     "    return dataset"
    ]
   },
@@ -176,7 +177,12 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2d_real_dialogues\", \"MULTIWOZ2_2\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2d_real_dialogues\",\n",
+    "    \"MULTIWOZ2_2\",\n",
+    "    private=True,\n",
+    "    token=env_settings.HUGGINGFACE_TOKEN,\n",
+    ")"
    ]
   },
   {
@@ -265,7 +271,9 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"DeepPavlov/d2g_real_dialogues\", \"MULTIWOZ2_2\", token=env_settings.HUGGINGFACE_TOKEN)\n",
+    "dataset = datasets.load_dataset(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\", \"MULTIWOZ2_2\", token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -315,7 +323,7 @@
     }
    ],
    "source": [
-    "dataset['train'][2000]"
+    "dataset[\"train\"][2000]"
    ]
   },
   {
@@ -450,7 +458,12 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2g_real_dialogues\", \"META_WOZ\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\",\n",
+    "    \"META_WOZ\",\n",
+    "    private=True,\n",
+    "    token=env_settings.HUGGINGFACE_TOKEN,\n",
+    ")"
    ]
   },
   {
@@ -567,7 +580,9 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"DeepPavlov/d2g_real_dialogues\", \"META_WOZ\", token=env_settings.HUGGINGFACE_TOKEN)\n",
+    "dataset = datasets.load_dataset(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\", \"META_WOZ\", token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -608,7 +623,7 @@
     }
    ],
    "source": [
-    "dataset['train'][2000]"
+    "dataset[\"train\"][2000]"
    ]
   },
   {
@@ -743,7 +758,12 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2g_real_dialogues\", \"SCHEMA\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\",\n",
+    "    \"SCHEMA\",\n",
+    "    private=True,\n",
+    "    token=env_settings.HUGGINGFACE_TOKEN,\n",
+    ")"
    ]
   },
   {
@@ -860,7 +880,9 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"DeepPavlov/d2g_real_dialogues\", \"SCHEMA\", token=env_settings.HUGGINGFACE_TOKEN)\n",
+    "dataset = datasets.load_dataset(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\", \"SCHEMA\", token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -893,7 +915,7 @@
     }
    ],
    "source": [
-    "dataset['train'][2000]"
+    "dataset[\"train\"][2000]"
    ]
   },
   {
@@ -1061,7 +1083,12 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2g_real_dialogues\", \"SMD\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\",\n",
+    "    \"SMD\",\n",
+    "    private=True,\n",
+    "    token=env_settings.HUGGINGFACE_TOKEN,\n",
+    ")"
    ]
   },
   {
@@ -1178,7 +1205,9 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"DeepPavlov/d2g_real_dialogues\", \"SMD\", token=env_settings.HUGGINGFACE_TOKEN)\n",
+    "dataset = datasets.load_dataset(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\", \"SMD\", token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -1204,7 +1233,7 @@
     }
    ],
    "source": [
-    "dataset['train'][2000]"
+    "dataset[\"train\"][2000]"
    ]
   },
   {
@@ -1339,7 +1368,12 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2g_real_dialogues\", \"MSR-E2E\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\",\n",
+    "    \"MSR-E2E\",\n",
+    "    private=True,\n",
+    "    token=env_settings.HUGGINGFACE_TOKEN,\n",
+    ")"
    ]
   },
   {
@@ -1456,7 +1490,9 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"DeepPavlov/d2g_real_dialogues\", \"MSR-E2E\", token=env_settings.HUGGINGFACE_TOKEN)\n",
+    "dataset = datasets.load_dataset(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\", \"MSR-E2E\", token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -1483,7 +1519,7 @@
     }
    ],
    "source": [
-    "dataset['train'][1000]"
+    "dataset[\"train\"][1000]"
    ]
   },
   {
@@ -1520,7 +1556,12 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2g_real_dialogues\", \"Frames\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\",\n",
+    "    \"Frames\",\n",
+    "    private=True,\n",
+    "    token=env_settings.HUGGINGFACE_TOKEN,\n",
+    ")"
    ]
   },
   {
@@ -1609,7 +1650,9 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"DeepPavlov/d2g_real_dialogues\", \"Frames\", token=env_settings.HUGGINGFACE_TOKEN)\n",
+    "dataset = datasets.load_dataset(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\", \"Frames\", token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -1655,7 +1698,7 @@
     }
    ],
    "source": [
-    "dataset['train'][0]"
+    "dataset[\"train\"][0]"
    ]
   },
   {
@@ -1693,7 +1736,7 @@
     }
    ],
    "source": [
-    "dataset['validation'][0]"
+    "dataset[\"validation\"][0]"
    ]
   },
   {
@@ -1828,7 +1871,12 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2g_real_dialogues\", \"TaskMaster3\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\",\n",
+    "    \"TaskMaster3\",\n",
+    "    private=True,\n",
+    "    token=env_settings.HUGGINGFACE_TOKEN,\n",
+    ")"
    ]
   },
   {
@@ -1945,7 +1993,9 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"DeepPavlov/d2g_real_dialogues\", \"TaskMaster3\", token=env_settings.HUGGINGFACE_TOKEN)\n",
+    "dataset = datasets.load_dataset(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\", \"TaskMaster3\", token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -1998,7 +2048,7 @@
     }
    ],
    "source": [
-    "dataset['validation'][0]"
+    "dataset[\"validation\"][0]"
    ]
   },
   {
@@ -2147,7 +2197,12 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2g_real_dialogues\", \"WOZ\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\",\n",
+    "    \"WOZ\",\n",
+    "    private=True,\n",
+    "    token=env_settings.HUGGINGFACE_TOKEN,\n",
+    ")"
    ]
   },
   {
@@ -2264,7 +2319,9 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"DeepPavlov/d2g_real_dialogues\", \"WOZ\", token=env_settings.HUGGINGFACE_TOKEN)\n",
+    "dataset = datasets.load_dataset(\n",
+    "    \"DeepPavlov/d2g_real_dialogues\", \"WOZ\", token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -2295,7 +2352,7 @@
     }
    ],
    "source": [
-    "dataset['test'][0]"
+    "dataset[\"test\"][0]"
    ]
   }
  ],
