--- a/experiments/exp2025_03_10_push_dataset_to_hub/exp2025_03_10_push_dataset_to_hub/push_to_hub.ipynb
+++ b/experiments/exp2025_03_10_push_dataset_to_hub/exp2025_03_10_push_dataset_to_hub/push_to_hub.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import pathlib\n"
+    "import pathlib"
    ]
   },
   {
@@ -30,9 +30,8 @@
     "\n",
     "\n",
     "class EnvSettings(BaseSettings, case_sensitive=True):\n",
-    "\n",
     "    model_config = SettingsConfigDict(env_file=\"./.env\", env_file_encoding=\"utf-8\")\n",
-    "    HUGGINGFACE_TOKEN: Optional[str]\n"
+    "    HUGGINGFACE_TOKEN: Optional[str]"
    ]
   },
   {
@@ -51,7 +50,7 @@
    "outputs": [],
    "source": [
     "data = []\n",
-    "for file in [p for p in pathlib.Path('../data').iterdir() if p.is_file()]:\n",
+    "for file in [p for p in pathlib.Path(\"../data\").iterdir() if p.is_file()]:\n",
     "    with open(file) as f:\n",
     "        data.extend(json.load(f))\n",
     "data"
@@ -64,10 +63,10 @@
    "outputs": [],
    "source": [
     "for idx1 in range(len(data)):\n",
-    "    for idx2 in range(len(data[idx1]['dialogues'])):\n",
-    "        data[idx1]['dialogues'][idx2].pop('topic', None)\n",
-    "        data[idx1]['dialogues'][idx2].pop('validate', None)\n",
-    "data\n"
+    "    for idx2 in range(len(data[idx1][\"dialogues\"])):\n",
+    "        data[idx1][\"dialogues\"][idx2].pop(\"topic\", None)\n",
+    "        data[idx1][\"dialogues\"][idx2].pop(\"validate\", None)\n",
+    "data"
    ]
   },
   {
@@ -78,11 +77,13 @@
    "source": [
     "counter = {}\n",
     "for idx1 in range(len(data)):\n",
-    "    if data[idx1]['topic'] not in counter:\n",
-    "        counter[data[idx1]['topic']] = 0\n",
-    "    counter[data[idx1]['topic']] += 1\n",
-    "    for idx2 in range(len(data[idx1]['dialogues'])):\n",
-    "        data[idx1]['dialogues'][idx2]['id'] = f\"{data[idx1]['topic']}_{counter[data[idx1]['topic']]}_{idx2}\""
+    "    if data[idx1][\"topic\"] not in counter:\n",
+    "        counter[data[idx1][\"topic\"]] = 0\n",
+    "    counter[data[idx1][\"topic\"]] += 1\n",
+    "    for idx2 in range(len(data[idx1][\"dialogues\"])):\n",
+    "        data[idx1][\"dialogues\"][idx2][\"id\"] = (\n",
+    "            f\"{data[idx1]['topic']}_{counter[data[idx1]['topic']]}_{idx2}\"\n",
+    "        )"
    ]
   },
   {
@@ -91,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[5]['dialogues'][1]"
+    "data[5][\"dialogues\"][1]"
    ]
   },
   {
@@ -132,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset[0]['dialogues'][1]"
+    "dataset[0][\"dialogues\"][1]"
    ]
   },
   {
@@ -141,7 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.push_to_hub(\"DeepPavlov/d2g_generated\", private=True, token=env_settings.HUGGINGFACE_TOKEN)"
+    "dataset.push_to_hub(\n",
+    "    \"DeepPavlov/d2g_generated\", private=True, token=env_settings.HUGGINGFACE_TOKEN\n",
+    ")"
    ]
   },
   {
@@ -160,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset['train'][0]"
+    "dataset[\"train\"][0]"
    ]
   }
  ],
