--- a/experiments/exp2025_03_11_all_uttrs_present/exp2025_03_11_all_uttrs_present/tests.ipynb
+++ b/experiments/exp2025_03_11_all_uttrs_present/exp2025_03_11_all_uttrs_present/tests.ipynb
@@ -29,7 +29,6 @@
    "outputs": [],
    "source": [
     "class EnvSettings(BaseSettings, case_sensitive=True):\n",
-    "\n",
     "    model_config = SettingsConfigDict(env_file=\"./.env\", env_file_encoding=\"utf-8\")\n",
     "\n",
     "    OPENAI_API_KEY: Optional[str]\n",
@@ -65,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dataset['train'][0]"
+    "data = dataset[\"train\"][0]"
    ]
   },
   {
@@ -74,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset['train'][0]['dialogues']"
+    "dataset[\"train\"][0][\"dialogues\"]"
    ]
   },
   {
@@ -83,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialogues = [Dialogue.from_list(c['messages'], c['id']) for c in data['dialogues']]"
+    "dialogues = [Dialogue.from_list(c[\"messages\"], c[\"id\"]) for c in data[\"dialogues\"]]"
    ]
   },
   {
@@ -101,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_triplets_dg(Graph(data['graph']),dialogues)"
+    "match_triplets_dg(Graph(data[\"graph\"]), dialogues)"
    ]
   },
   {
@@ -110,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "are_paths_valid(Graph(data['graph']),dialogues)"
+    "are_paths_valid(Graph(data[\"graph\"]), dialogues)"
    ]
   },
   {
@@ -119,9 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['graph']['edges'] += [{'source': 9,\n",
-    "    'target': 2,\n",
-    "    'utterances': ['I want to cancel my order.']}]"
+    "data[\"graph\"][\"edges\"] += [\n",
+    "    {\"source\": 9, \"target\": 2, \"utterances\": [\"I want to cancel my order.\"]}\n",
+    "]"
    ]
   },
   {
@@ -130,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_triplets_dg(Graph(data['graph']),dialogues)"
+    "match_triplets_dg(Graph(data[\"graph\"]), dialogues)"
    ]
   },
   {
@@ -139,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['graph']['edges'].pop(0)"
+    "data[\"graph\"][\"edges\"].pop(0)"
    ]
   },
   {
@@ -148,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_triplets_dg(Graph(data['graph']),dialogues)"
+    "match_triplets_dg(Graph(data[\"graph\"]), dialogues)"
    ]
   },
   {
@@ -157,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "are_paths_valid(Graph(data['graph']),dialogues)"
+    "are_paths_valid(Graph(data[\"graph\"]), dialogues)"
    ]
   },
   {
@@ -166,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2 = dataset['train'][1]"
+    "data_2 = dataset[\"train\"][1]"
    ]
   },
   {
@@ -175,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compare_graphs(Graph(data['graph']),Graph(data_2['graph']))"
+    "compare_graphs(Graph(data[\"graph\"]), Graph(data_2[\"graph\"]))"
    ]
   }
  ],
