--- a/experiments/exp2025_03_17_sample_graph_incrementation/exp2025_03_17_sample_graph_incrementation/graph_incrementation.ipynb
+++ b/experiments/exp2025_03_17_sample_graph_incrementation/exp2025_03_17_sample_graph_incrementation/graph_incrementation.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -49,6 +51,7 @@
    ],
    "source": [
     "from settings import EnvSettings\n",
+    "\n",
     "env_settings = EnvSettings()\n",
     "env_settings.GENERATION_MODEL_NAME"
    ]
@@ -62,8 +65,8 @@
     "from three_stages_1 import ThreeStagesGraphGenerator as Generator\n",
     "from three_stages_0i import ThreeStagesGraphGenerator as GeneratorI0\n",
     "\n",
-    "graph_generator = Generator(\"o3-mini\") # To generate 1st graph from one dialogue\n",
-    "graph_generator_llm = GeneratorI0() # To add dialogue to existing graph with LLM"
+    "graph_generator = Generator(\"o3-mini\")  # To generate 1st graph from one dialogue\n",
+    "graph_generator_llm = GeneratorI0()  # To add dialogue to existing graph with LLM"
    ]
   },
   {
@@ -101,8 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '../data/generated_24_with_ids.json'\n",
-    "with open(path, 'r', encoding=\"utf-8\") as f:\n",
+    "path = \"../data/generated_24_with_ids.json\"\n",
+    "with open(path, \"r\", encoding=\"utf-8\") as f:\n",
     "    generated_24 = json.load(f)"
    ]
   },
@@ -375,29 +378,35 @@
     "\n",
     "for id, example in enumerate(generated_24[:5]):\n",
     "    # new example\n",
-    "    dialogues = example['dialogues']\n",
-    "    example['incremental'] = {}\n",
+    "    dialogues = example[\"dialogues\"]\n",
+    "    example[\"incremental\"] = {}\n",
     "    for i in range(len(dialogues)):\n",
-    "        example['incremental'].setdefault(f'graph_{i}')\n",
+    "        example[\"incremental\"].setdefault(f\"graph_{i}\")\n",
     "\n",
     "    # Generation of the 1st graph\n",
-    "    first_dialogue = Dialogue.from_list(dialogues[0]['messages'])\n",
+    "    first_dialogue = Dialogue.from_list(dialogues[0][\"messages\"])\n",
     "    first_graph = graph_generator.invoke([first_dialogue])\n",
-    "    example['incremental']['graph_0'] = first_graph.graph_dict\n",
-    "    with open(f\"../data/gen24_graphid{id}_incrementation.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "    example[\"incremental\"][\"graph_0\"] = first_graph.graph_dict\n",
+    "    with open(\n",
+    "        f\"../data/gen24_graphid{id}_incrementation.json\", \"w\", encoding=\"utf-8\"\n",
+    "    ) as file:\n",
     "        json.dump(example, file, indent=4, sort_keys=True)\n",
     "\n",
     "    # graph incrementation\n",
     "    for i in range(len(dialogues)):\n",
     "        if i == 0:\n",
-    "            result_graph = Graph(example['incremental']['graph_0'])\n",
+    "            result_graph = Graph(example[\"incremental\"][\"graph_0\"])\n",
     "        else:\n",
-    "            new_dialogue = Dialogue.from_list(dialogues[i]['messages'])\n",
+    "            new_dialogue = Dialogue.from_list(dialogues[i][\"messages\"])\n",
     "            try:\n",
     "                result_graph = graph_generator_llm.invoke([new_dialogue], result_graph)\n",
-    "                example['incremental'][f'graph_{i}'] = result_graph.graph_dict\n",
+    "                example[\"incremental\"][f\"graph_{i}\"] = result_graph.graph_dict\n",
     "\n",
-    "                with open(f\"../data/gen24_graphid{id}_incrementation.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "                with open(\n",
+    "                    f\"../data/gen24_graphid{id}_incrementation.json\",\n",
+    "                    \"w\",\n",
+    "                    encoding=\"utf-8\",\n",
+    "                ) as file:\n",
     "                    json.dump(example, file, indent=4, sort_keys=True)\n",
     "\n",
     "            except Exception as e:\n",
@@ -465,15 +474,22 @@
     }
    ],
    "source": [
-    "with open(\"../data/gen24_graphid0_incrementation.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid0_incrementation.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    example = json.load(f)\n",
-    "true_graph = Graph(example['graph'])\n",
-    "graphs = [graph for graph in example['incremental'].values()]\n",
+    "true_graph = Graph(example[\"graph\"])\n",
+    "graphs = [graph for graph in example[\"incremental\"].values()]\n",
     "result_graph = Graph(graphs[-1])\n",
-    "print(f'is_same_structure:', is_same_structure(true_graph,result_graph), '\\n----------------')\n",
-    "print(f'----------------\\ntriplet_match_accuracy:', triplet_match_accuracy(true_graph,result_graph))\n",
-    "true_graph.visualise_short('true_graph id_0')\n",
-    "result_graph.visualise_short(f'result_graph ({len(graphs)} dialogues)')"
+    "print(\n",
+    "    \"is_same_structure:\",\n",
+    "    is_same_structure(true_graph, result_graph),\n",
+    "    \"\\n----------------\",\n",
+    ")\n",
+    "print(\n",
+    "    \"----------------\\ntriplet_match_accuracy:\",\n",
+    "    triplet_match_accuracy(true_graph, result_graph),\n",
+    ")\n",
+    "true_graph.visualise_short(\"true_graph id_0\")\n",
+    "result_graph.visualise_short(f\"result_graph ({len(graphs)} dialogues)\")"
    ]
   },
   {
@@ -515,15 +531,22 @@
     }
    ],
    "source": [
-    "with open(\"../data/gen24_graphid1_incrementation.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid1_incrementation.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    example = json.load(f)\n",
-    "true_graph = Graph(example['graph'])\n",
-    "graphs = [graph for graph in example['incremental'].values()]\n",
+    "true_graph = Graph(example[\"graph\"])\n",
+    "graphs = [graph for graph in example[\"incremental\"].values()]\n",
     "result_graph = Graph(graphs[-1])\n",
-    "print(f'is_same_structure:', is_same_structure(true_graph,result_graph), '\\n----------------')\n",
-    "print(f'----------------\\ntriplet_match_accuracy:', triplet_match_accuracy(true_graph,result_graph))\n",
-    "true_graph.visualise_short('true_graph id_1')\n",
-    "result_graph.visualise_short(f'result_graph ({len(graphs)} dialogues)')"
+    "print(\n",
+    "    \"is_same_structure:\",\n",
+    "    is_same_structure(true_graph, result_graph),\n",
+    "    \"\\n----------------\",\n",
+    ")\n",
+    "print(\n",
+    "    \"----------------\\ntriplet_match_accuracy:\",\n",
+    "    triplet_match_accuracy(true_graph, result_graph),\n",
+    ")\n",
+    "true_graph.visualise_short(\"true_graph id_1\")\n",
+    "result_graph.visualise_short(f\"result_graph ({len(graphs)} dialogues)\")"
    ]
   },
   {
@@ -565,15 +588,22 @@
     }
    ],
    "source": [
-    "with open(\"../data/gen24_graphid2_incrementation.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid2_incrementation.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    example = json.load(f)\n",
-    "true_graph = Graph(example['graph'])\n",
-    "graphs = [graph for graph in example['incremental'].values()]\n",
+    "true_graph = Graph(example[\"graph\"])\n",
+    "graphs = [graph for graph in example[\"incremental\"].values()]\n",
     "result_graph = Graph(graphs[-1])\n",
-    "print(f'is_same_structure:', is_same_structure(true_graph,result_graph), '\\n----------------')\n",
-    "print(f'----------------\\ntriplet_match_accuracy:', triplet_match_accuracy(true_graph,result_graph))\n",
-    "true_graph.visualise_short('true_graph id_2')\n",
-    "result_graph.visualise_short(f'result_graph ({len(graphs)} dialogues)')"
+    "print(\n",
+    "    \"is_same_structure:\",\n",
+    "    is_same_structure(true_graph, result_graph),\n",
+    "    \"\\n----------------\",\n",
+    ")\n",
+    "print(\n",
+    "    \"----------------\\ntriplet_match_accuracy:\",\n",
+    "    triplet_match_accuracy(true_graph, result_graph),\n",
+    ")\n",
+    "true_graph.visualise_short(\"true_graph id_2\")\n",
+    "result_graph.visualise_short(f\"result_graph ({len(graphs)} dialogues)\")"
    ]
   },
   {
@@ -616,15 +646,22 @@
     }
    ],
    "source": [
-    "with open(\"../data/gen24_graphid3_incrementation.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid3_incrementation.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    example = json.load(f)\n",
-    "true_graph = Graph(example['graph'])\n",
-    "graphs = [graph for graph in example['incremental'].values()]\n",
+    "true_graph = Graph(example[\"graph\"])\n",
+    "graphs = [graph for graph in example[\"incremental\"].values()]\n",
     "result_graph = Graph(graphs[-1])\n",
-    "print(f'is_same_structure:', is_same_structure(true_graph,result_graph), '\\n----------------')\n",
-    "print(f'----------------\\ntriplet_match_accuracy:', triplet_match_accuracy(true_graph,result_graph))\n",
-    "true_graph.visualise_short('true_graph id_3')\n",
-    "result_graph.visualise_short(f'result_graph ({len(graphs)} dialogues)')"
+    "print(\n",
+    "    \"is_same_structure:\",\n",
+    "    is_same_structure(true_graph, result_graph),\n",
+    "    \"\\n----------------\",\n",
+    ")\n",
+    "print(\n",
+    "    \"----------------\\ntriplet_match_accuracy:\",\n",
+    "    triplet_match_accuracy(true_graph, result_graph),\n",
+    ")\n",
+    "true_graph.visualise_short(\"true_graph id_3\")\n",
+    "result_graph.visualise_short(f\"result_graph ({len(graphs)} dialogues)\")"
    ]
   },
   {
@@ -666,15 +703,22 @@
     }
    ],
    "source": [
-    "with open(\"../data/gen24_graphid4_incrementation.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid4_incrementation.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    example = json.load(f)\n",
-    "true_graph = Graph(example['graph'])\n",
-    "graphs = [graph for graph in example['incremental'].values()]\n",
+    "true_graph = Graph(example[\"graph\"])\n",
+    "graphs = [graph for graph in example[\"incremental\"].values()]\n",
     "result_graph = Graph(graphs[-1])\n",
-    "print(f'is_same_structure:', is_same_structure(true_graph,result_graph), '\\n----------------')\n",
-    "print(f'----------------\\ntriplet_match_accuracy:', triplet_match_accuracy(true_graph,result_graph))\n",
-    "true_graph.visualise_short('true_graph id_4')\n",
-    "result_graph.visualise_short(f'result_graph ({len(graphs)} dialogues)')"
+    "print(\n",
+    "    \"is_same_structure:\",\n",
+    "    is_same_structure(true_graph, result_graph),\n",
+    "    \"\\n----------------\",\n",
+    ")\n",
+    "print(\n",
+    "    \"----------------\\ntriplet_match_accuracy:\",\n",
+    "    triplet_match_accuracy(true_graph, result_graph),\n",
+    ")\n",
+    "true_graph.visualise_short(\"true_graph id_4\")\n",
+    "result_graph.visualise_short(f\"result_graph ({len(graphs)} dialogues)\")"
    ]
   },
   {
