--- a/experiments/exp2025_03_18_embedding_grouper/exp2025_03_18_embedding_grouper/grouper.ipynb
+++ b/experiments/exp2025_03_18_embedding_grouper/exp2025_03_18_embedding_grouper/grouper.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -58,6 +59,7 @@
    "outputs": [],
    "source": [
     "from settings import EnvSettings\n",
+    "\n",
     "env_settings = EnvSettings()"
    ]
   },
@@ -101,9 +103,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generation_model = ChatOpenAI(model=\"chatgpt-4o-latest\", api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL, temperature=1)\n",
-    "theme_validation_model = ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL, temperature=0)\n",
-    "validation_model = ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL, temperature=0)"
+    "generation_model = ChatOpenAI(\n",
+    "    model=\"chatgpt-4o-latest\",\n",
+    "    api_key=env_settings.OPENAI_API_KEY,\n",
+    "    base_url=env_settings.OPENAI_BASE_URL,\n",
+    "    temperature=1,\n",
+    ")\n",
+    "theme_validation_model = ChatOpenAI(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    api_key=env_settings.OPENAI_API_KEY,\n",
+    "    base_url=env_settings.OPENAI_BASE_URL,\n",
+    "    temperature=0,\n",
+    ")\n",
+    "validation_model = ChatOpenAI(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    api_key=env_settings.OPENAI_API_KEY,\n",
+    "    base_url=env_settings.OPENAI_BASE_URL,\n",
+    "    temperature=0,\n",
+    ")"
    ]
   },
   {
@@ -112,7 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic_generator = LoopedGraphGenerator(generation_model,validation_model, theme_validation_model)"
+    "topic_generator = LoopedGraphGenerator(\n",
+    "    generation_model, validation_model, theme_validation_model\n",
+    ")"
    ]
   },
   {
@@ -180,7 +199,7 @@
     }
    ],
    "source": [
-    "graph[0]['graph']['nodes']"
+    "graph[0][\"graph\"][\"nodes\"]"
    ]
   },
   {
@@ -259,7 +278,7 @@
     }
    ],
    "source": [
-    "graph[0]['graph']['edges']"
+    "graph[0][\"graph\"][\"edges\"]"
    ]
   },
   {
@@ -269,107 +288,188 @@
    "outputs": [],
    "source": [
     "graph_generated = {\n",
-    "    \"nodes\": [{'id': 1,\n",
-    "  'label': 'start',\n",
-    "  'is_start': True,\n",
-    "  'utterances': ['Hey there! How can I help you today?']},\n",
-    " {'id': 2,\n",
-    "  'label': 'ask_transfer_details',\n",
-    "  'is_start': False,\n",
-    "  'utterances': ['Got it! Which airport are you flying from or landing at, and what’s your destination?',\n",
-    "   'Sure! From which airport and to where do you need the transfer?']},\n",
-    " {'id': 3,\n",
-    "  'label': 'ask_number_of_passengers',\n",
-    "  'is_start': False,\n",
-    "  'utterances': ['Alright, how many passengers will there be?',\n",
-    "   'Got it! How many people will be traveling?']},\n",
-    " {'id': 4,\n",
-    "  'label': 'ask_vehicle_preference',\n",
-    "  'is_start': False,\n",
-    "  'utterances': ['Do you have a specific type of vehicle in mind? I can check availability.',\n",
-    "   'Would you prefer a private car, a shared shuttle, or something else?']},\n",
-    " {'id': 5,\n",
-    "  'label': 'confirm_price_and_availability',\n",
-    "  'is_start': False,\n",
-    "  'utterances': ['Here are your options: Private car for $60, shared shuttle for $20 per person. Which do you prefer?',\n",
-    "   'I found a few options for you. A private car would be $50, and a shared shuttle is $25 per person. Which one works best?']},\n",
-    " {'id': 6,\n",
-    "  'label': 'ask_booking_details',\n",
-    "  'is_start': False,\n",
-    "  'utterances': ['Awesome choice! Could you provide your flight number and preferred pickup time?',\n",
-    "   'Great! I’ll need your name and flight details to confirm the booking.']},\n",
-    " {'id': 7,\n",
-    "  'label': 'confirm_booking',\n",
-    "  'is_start': False,\n",
-    "  'utterances': ['Your airport transfer is booked! The reference number is XFR67890. Need anything else?',\n",
-    "   'You’re all set! Your booking reference is TRF12345. Anything else I can help with?']},\n",
-    " {'id': 8,\n",
-    "  'label': 'closing',\n",
-    "  'is_start': False,\n",
-    "  'utterances': ['All set! Have a great day!',\n",
-    "   'Glad to help! Safe travels!',\n",
-    "   'You’re welcome! Have a great trip!']}],\n",
-    "   \"edges\":\n",
-    "   [{'source': 1,\n",
-    "  'target': 2,\n",
-    "  'utterances': ['Hey! I need an airport transfer.',\n",
-    "   'Hi, can I book a ride from the airport?',\n",
-    "   'Hello! I need help with transportation from the airport.']},\n",
-    " {'source': 2,\n",
-    "  'target': 3,\n",
-    "  'utterances': ['I’m arriving at JFK and need a ride to Manhattan.',\n",
-    "   'Flying into LAX, heading to Santa Monica.',\n",
-    "   'I need a transfer from Heathrow to the city center.']},\n",
-    " {'source': 3,\n",
-    "  'target': 4,\n",
-    "  'utterances': ['It’s just me.',\n",
-    "   'We are a group of four.',\n",
-    "   'There are two of us.']},\n",
-    " {'source': 4,\n",
-    "  'target': 5,\n",
-    "  'utterances': ['I’d prefer a private car.',\n",
-    "   'A shared shuttle sounds good.',\n",
-    "   'Something affordable, maybe a shuttle?']},\n",
-    " {'source': 5,\n",
-    "  'target': 6,\n",
-    "  'utterances': ['I’ll take the private car.',\n",
-    "   'I’ll go with the shared shuttle.',\n",
-    "   'Let’s do the private ride for $50.']},\n",
-    " {'source': 6,\n",
-    "  'target': 7,\n",
-    "  'utterances': ['Name is John, flight number AA123, arriving at 2 PM.',\n",
-    "   'Flight BA456, landing at 6 PM, name’s Sarah.',\n",
-    "   'Delta 789, getting in around 10 AM.']},\n",
-    " {'source': 7,\n",
-    "  'target': 8,\n",
-    "  'utterances': ['Nope, that’s all. Thanks!',\n",
-    "   'Thanks a lot! That’s all I needed.',\n",
-    "   'No, I’m good. Thank you!']},\n",
-    " {'source': 4,\n",
-    "  'target': 3,\n",
-    "  'utterances': ['Actually, can I change the number of passengers?',\n",
-    "   'Wait, I need to update the passenger count.',\n",
-    "   'Sorry, I need to adjust how many people are coming.']},\n",
-    " {'source': 5,\n",
-    "  'target': 4,\n",
-    "  'utterances': ['Can I change my vehicle choice?',\n",
-    "   'Actually, can I switch to a private car instead?',\n",
-    "   'Wait, I think I want a different vehicle.']},\n",
-    " {'source': 6,\n",
-    "  'target': 5,\n",
-    "  'utterances': ['Can we go over the prices again?',\n",
-    "   'Wait, what were the transfer options?',\n",
-    "   'Actually, can you repeat the pricing details?']},\n",
-    " {'source': 2,\n",
-    "  'target': 8,\n",
-    "  'utterances': ['Never mind, I’ll figure it out myself.',\n",
-    "   'I changed my mind, thanks anyway.',\n",
-    "   'I don’t need a transfer anymore, but thanks!']},\n",
-    " {'source': 4,\n",
-    "  'target': 8,\n",
-    "  'utterances': ['Actually, I’ll make other arrangements. Thanks!',\n",
-    "   'I’ll check some other options instead, thanks.',\n",
-    "   'You know what, never mind. Appreciate the help!']}]\n",
+    "    \"nodes\": [\n",
+    "        {\n",
+    "            \"id\": 1,\n",
+    "            \"label\": \"start\",\n",
+    "            \"is_start\": True,\n",
+    "            \"utterances\": [\"Hey there! How can I help you today?\"],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 2,\n",
+    "            \"label\": \"ask_transfer_details\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"Got it! Which airport are you flying from or landing at, and what’s your destination?\",\n",
+    "                \"Sure! From which airport and to where do you need the transfer?\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 3,\n",
+    "            \"label\": \"ask_number_of_passengers\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"Alright, how many passengers will there be?\",\n",
+    "                \"Got it! How many people will be traveling?\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 4,\n",
+    "            \"label\": \"ask_vehicle_preference\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"Do you have a specific type of vehicle in mind? I can check availability.\",\n",
+    "                \"Would you prefer a private car, a shared shuttle, or something else?\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 5,\n",
+    "            \"label\": \"confirm_price_and_availability\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"Here are your options: Private car for $60, shared shuttle for $20 per person. Which do you prefer?\",\n",
+    "                \"I found a few options for you. A private car would be $50, and a shared shuttle is $25 per person. Which one works best?\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 6,\n",
+    "            \"label\": \"ask_booking_details\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"Awesome choice! Could you provide your flight number and preferred pickup time?\",\n",
+    "                \"Great! I’ll need your name and flight details to confirm the booking.\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 7,\n",
+    "            \"label\": \"confirm_booking\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"Your airport transfer is booked! The reference number is XFR67890. Need anything else?\",\n",
+    "                \"You’re all set! Your booking reference is TRF12345. Anything else I can help with?\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 8,\n",
+    "            \"label\": \"closing\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"All set! Have a great day!\",\n",
+    "                \"Glad to help! Safe travels!\",\n",
+    "                \"You’re welcome! Have a great trip!\",\n",
+    "            ],\n",
+    "        },\n",
+    "    ],\n",
+    "    \"edges\": [\n",
+    "        {\n",
+    "            \"source\": 1,\n",
+    "            \"target\": 2,\n",
+    "            \"utterances\": [\n",
+    "                \"Hey! I need an airport transfer.\",\n",
+    "                \"Hi, can I book a ride from the airport?\",\n",
+    "                \"Hello! I need help with transportation from the airport.\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 2,\n",
+    "            \"target\": 3,\n",
+    "            \"utterances\": [\n",
+    "                \"I’m arriving at JFK and need a ride to Manhattan.\",\n",
+    "                \"Flying into LAX, heading to Santa Monica.\",\n",
+    "                \"I need a transfer from Heathrow to the city center.\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 3,\n",
+    "            \"target\": 4,\n",
+    "            \"utterances\": [\n",
+    "                \"It’s just me.\",\n",
+    "                \"We are a group of four.\",\n",
+    "                \"There are two of us.\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 4,\n",
+    "            \"target\": 5,\n",
+    "            \"utterances\": [\n",
+    "                \"I’d prefer a private car.\",\n",
+    "                \"A shared shuttle sounds good.\",\n",
+    "                \"Something affordable, maybe a shuttle?\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 5,\n",
+    "            \"target\": 6,\n",
+    "            \"utterances\": [\n",
+    "                \"I’ll take the private car.\",\n",
+    "                \"I’ll go with the shared shuttle.\",\n",
+    "                \"Let’s do the private ride for $50.\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 6,\n",
+    "            \"target\": 7,\n",
+    "            \"utterances\": [\n",
+    "                \"Name is John, flight number AA123, arriving at 2 PM.\",\n",
+    "                \"Flight BA456, landing at 6 PM, name’s Sarah.\",\n",
+    "                \"Delta 789, getting in around 10 AM.\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 7,\n",
+    "            \"target\": 8,\n",
+    "            \"utterances\": [\n",
+    "                \"Nope, that’s all. Thanks!\",\n",
+    "                \"Thanks a lot! That’s all I needed.\",\n",
+    "                \"No, I’m good. Thank you!\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 4,\n",
+    "            \"target\": 3,\n",
+    "            \"utterances\": [\n",
+    "                \"Actually, can I change the number of passengers?\",\n",
+    "                \"Wait, I need to update the passenger count.\",\n",
+    "                \"Sorry, I need to adjust how many people are coming.\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 5,\n",
+    "            \"target\": 4,\n",
+    "            \"utterances\": [\n",
+    "                \"Can I change my vehicle choice?\",\n",
+    "                \"Actually, can I switch to a private car instead?\",\n",
+    "                \"Wait, I think I want a different vehicle.\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 6,\n",
+    "            \"target\": 5,\n",
+    "            \"utterances\": [\n",
+    "                \"Can we go over the prices again?\",\n",
+    "                \"Wait, what were the transfer options?\",\n",
+    "                \"Actually, can you repeat the pricing details?\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 2,\n",
+    "            \"target\": 8,\n",
+    "            \"utterances\": [\n",
+    "                \"Never mind, I’ll figure it out myself.\",\n",
+    "                \"I changed my mind, thanks anyway.\",\n",
+    "                \"I don’t need a transfer anymore, but thanks!\",\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"source\": 4,\n",
+    "            \"target\": 8,\n",
+    "            \"utterances\": [\n",
+    "                \"Actually, I’ll make other arrangements. Thanks!\",\n",
+    "                \"I’ll check some other options instead, thanks.\",\n",
+    "                \"You know what, never mind. Appreciate the help!\",\n",
+    "            ],\n",
+    "        },\n",
+    "    ],\n",
     "}"
    ]
   },
@@ -379,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph[0]['dialogues']"
+    "graph[0][\"dialogues\"]"
    ]
   },
   {
@@ -388,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Graph(graph[0]['graph']).visualise_short(\"Arranging airport transfers\")"
+    "Graph(graph[0][\"graph\"]).visualise_short(\"Arranging airport transfers\")"
    ]
   },
   {
@@ -415,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialogues = [Dialogue().from_list(seq['messages']) for seq in graph[0]['dialogues']]"
+    "dialogues = [Dialogue().from_list(seq[\"messages\"]) for seq in graph[0][\"dialogues\"]]"
    ]
   },
   {
@@ -432,7 +532,7 @@
     }
    ],
    "source": [
-    "dailogues = sampler.invoke(Graph(graph_generated),15)"
+    "dailogues = sampler.invoke(Graph(graph_generated), 15)"
    ]
   },
   {
@@ -450,8 +550,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('dialogues.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump([d.model_dump() for d  in dialogues], f, ensure_ascii=False, indent=4)"
+    "with open(\"dialogues.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump([d.model_dump() for d in dialogues], f, ensure_ascii=False, indent=4)"
    ]
   },
   {
@@ -460,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('dialogues.json') as f:\n",
+    "with open(\"dialogues.json\") as f:\n",
     "    dialogues = json.load(f)"
    ]
   },
@@ -479,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialogues = [Dialogue().from_list(seq['messages']) for seq in dialogues]"
+    "dialogues = [Dialogue().from_list(seq[\"messages\"]) for seq in dialogues]"
    ]
   },
   {
@@ -524,7 +624,7 @@
     }
    ],
    "source": [
-    "compare_graphs(res_graph,Graph(graph_generated))"
+    "compare_graphs(res_graph, Graph(graph_generated))"
    ]
   },
   {
@@ -584,7 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compare_graphs(res_graph,Graph(graph_generated))"
+    "compare_graphs(res_graph, Graph(graph_generated))"
    ]
   },
   {
@@ -599,9 +699,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from three_stages_llm import ThreeStagesGraphGenerator as LLMGenerator"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -704,7 +802,7 @@
     }
    ],
    "source": [
-    "compare_graphs(res_graph,Graph(graph_generated))"
+    "compare_graphs(res_graph, Graph(graph_generated))"
    ]
   }
  ],
