--- a/experiments/exp2025_03_19_dia2graph_3_ways/exp2025_03_19_dia2graph_3_ways/dia2graph_generation.ipynb
+++ b/experiments/exp2025_03_19_dia2graph_3_ways/exp2025_03_19_dia2graph_3_ways/dia2graph_generation.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -49,6 +50,7 @@
    "outputs": [],
    "source": [
     "from settings import EnvSettings\n",
+    "\n",
     "env_settings = EnvSettings()"
    ]
   },
@@ -74,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('transfer.json') as f:\n",
+    "with open(\"transfer.json\") as f:\n",
     "    data = json.load(f)"
    ]
   },
@@ -84,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Graph(data['graph']).visualise_short(\"Transfer graph\")"
+    "Graph(data[\"graph\"]).visualise_short(\"Transfer graph\")"
    ]
   },
   {
@@ -109,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialogues = [Dialogue().from_list(seq['messages']) for seq in data['dialogues']]"
+    "dialogues = [Dialogue().from_list(seq[\"messages\"]) for seq in data[\"dialogues\"]]"
    ]
   },
   {
@@ -211,7 +213,7 @@
     }
    ],
    "source": [
-    "compare_graphs(res_graph,Graph(data['graph']))"
+    "compare_graphs(res_graph, Graph(data[\"graph\"]))"
    ]
   },
   {
@@ -322,7 +324,7 @@
     }
    ],
    "source": [
-    "compare_graphs(res_graph,Graph(data['graph']))"
+    "compare_graphs(res_graph, Graph(data[\"graph\"]))"
    ]
   },
   {
@@ -338,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialogues = [Dialogue().from_list(data['dialogues'][0]['messages'])]"
+    "dialogues = [Dialogue().from_list(data[\"dialogues\"][0][\"messages\"])]"
    ]
   },
   {
@@ -365,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialogues = [Dialogue().from_list(data['dialogues'][1]['messages'])]"
+    "dialogues = [Dialogue().from_list(data[\"dialogues\"][1][\"messages\"])]"
    ]
   },
   {
@@ -401,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialogues = [Dialogue().from_list(data['dialogues'][2]['messages'])]\n",
+    "dialogues = [Dialogue().from_list(data[\"dialogues\"][2][\"messages\"])]\n",
     "graph_3, _ = llm_extender.invoke(dialogues, graph_2)\n",
     "graph_3.visualise_short(\"Transfer from 3 dialogue\")"
    ]
@@ -423,7 +425,7 @@
     }
    ],
    "source": [
-    "len(data['dialogues'])"
+    "len(data[\"dialogues\"])"
    ]
   }
  ],
