--- a/experiments/old_experiments/2024.10.06_synthetic_data_based_on_existing_graphs/gen_data.ipynb
+++ b/experiments/old_experiments/2024.10.06_synthetic_data_based_on_existing_graphs/gen_data.ipynb
@@ -31,8 +31,7 @@
    ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.messages import HumanMessage, SystemMessage\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.messages import HumanMessage\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "import matplotlib.pyplot as plt\n",
@@ -43,7 +42,8 @@
     "from tqdm import tqdm\n",
     "import time\n",
     "import networkx as nx\n",
-    "load_dotenv() "
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -59,10 +59,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"prompts/prompt_v2.txt\", 'r') as f:\n",
+    "with open(\"prompts/prompt_v2.txt\", \"r\") as f:\n",
     "    prompt = HumanMessage(f.read())\n",
     "\n",
-    "with open(\"prompts/prompt_augmentation.txt\", 'r') as f:\n",
+    "with open(\"prompts/prompt_augmentation.txt\", \"r\") as f:\n",
     "    aug_prompt = f.read()\n",
     "\n",
     "history = [prompt]"
@@ -74,11 +74,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=os.getenv(\"OPENAI_API_KEY\"), base_url=os.getenv(\"OPENAI_BASE_URL\"), temperature=0)\n",
-    "check_model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=os.getenv(\"OPENAI_API_KEY\"), base_url=os.getenv(\"OPENAI_BASE_URL\"), temperature=0)\n",
+    "gen_model = ChatOpenAI(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0,\n",
+    ")\n",
+    "check_model = ChatOpenAI(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0,\n",
+    ")\n",
     "\n",
-    "check_triplet_prompt = ChatPromptTemplate.from_template(\"decide if the triplet is valid. triplet: {triplet}\")\n",
-    "augmentation_prompt = ChatPromptTemplate.from_template(aug_prompt)\n"
+    "check_triplet_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"decide if the triplet is valid. triplet: {triplet}\"\n",
+    ")\n",
+    "augmentation_prompt = ChatPromptTemplate.from_template(aug_prompt)"
    ]
   },
   {
@@ -130,13 +142,13 @@
     "    while pair is None:\n",
     "        pair = generate_dialogue_graph_pair()\n",
     "        if pair is not None:\n",
-    "            pair['id'] = i + 1\n",
+    "            pair[\"id\"] = i + 1\n",
     "            results.append(pair)\n",
     "        else:\n",
     "            print(\"Invalid JSON.\")\n",
     "    time.sleep(1)  # Add a small delay between requests to avoid rate limiting\n",
     "\n",
-    "with open('dialogue_graph_pairs.json', 'w') as f:\n",
+    "with open(\"dialogue_graph_pairs.json\", \"w\") as f:\n",
     "    json.dump(results, f, indent=2)\n",
     "\n",
     "print(\"Generation complete. Results saved to dialogue_graph_pairs.json\")"
@@ -156,7 +168,15 @@
     "        G.add_edge(edge[\"source\"], edge[\"target\"], label=edge[\"utterances\"])\n",
     "\n",
     "    pos = nx.spring_layout(G)\n",
-    "    nx.draw(G, pos, with_labels=True, node_color=\"lightblue\", node_size=500, font_size=8, arrows=True)\n",
+    "    nx.draw(\n",
+    "        G,\n",
+    "        pos,\n",
+    "        with_labels=True,\n",
+    "        node_color=\"lightblue\",\n",
+    "        node_size=500,\n",
+    "        font_size=8,\n",
+    "        arrows=True,\n",
+    "    )\n",
     "    edge_labels = nx.get_edge_attributes(G, \"label\")\n",
     "    nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels, font_size=6)\n",
     "    plt.title(title)\n",
@@ -169,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('dialogue_graph_pairs.json', 'r') as f:\n",
+    "with open(\"dialogue_graph_pairs.json\", \"r\") as f:\n",
     "    graphs = json.load(f)"
    ]
   },
@@ -179,56 +199,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dialogues_from_graph(graph, readable: bool=False):\n",
+    "def dialogues_from_graph(graph, readable: bool = False):\n",
     "    # Create a directed graph from the JSON input\n",
     "    G = nx.DiGraph()\n",
-    "    \n",
+    "\n",
     "    # Add nodes and edges to the graph\n",
-    "    for node in graph['nodes']:\n",
+    "    for node in graph[\"nodes\"]:\n",
     "        # Ensure 'is_start' is included in the node attributes\n",
-    "        G.add_node(node['id'], label=node['label'], utterances=node['utterances'], is_start=node.get('is_start', False))\n",
-    "    \n",
-    "    for edge in graph['edges']:\n",
-    "        G.add_edge(edge['source'], edge['target'], utterances=edge['utterances'])\n",
-    "    \n",
+    "        G.add_node(\n",
+    "            node[\"id\"],\n",
+    "            label=node[\"label\"],\n",
+    "            utterances=node[\"utterances\"],\n",
+    "            is_start=node.get(\"is_start\", False),\n",
+    "        )\n",
+    "\n",
+    "    for edge in graph[\"edges\"]:\n",
+    "        G.add_edge(edge[\"source\"], edge[\"target\"], utterances=edge[\"utterances\"])\n",
+    "\n",
     "    # Start the dialogue from the starting node\n",
-    "    start_nodes = [node for node in G.nodes if G.nodes[node].get('is_start', True)]\n",
+    "    start_nodes = [node for node in G.nodes if G.nodes[node].get(\"is_start\", True)]\n",
     "    if not start_nodes:\n",
     "        raise ValueError(\"No starting node found in the graph.\")\n",
-    "    \n",
-    "    current_node = random.choice(start_nodes)  # Randomly select one of the starting nodes\n",
+    "\n",
+    "    current_node = random.choice(\n",
+    "        start_nodes\n",
+    "    )  # Randomly select one of the starting nodes\n",
     "    dialogue = []\n",
     "    visited_nodes = set()  # Track visited nodes to prevent cycles\n",
-    "    \n",
+    "\n",
     "    # Generate a dialogue by traversing the graph\n",
     "    while True:\n",
     "        # Get the current node's utterances\n",
-    "        node_utterances = G.nodes[current_node]['utterances']\n",
+    "        node_utterances = G.nodes[current_node][\"utterances\"]\n",
     "        # print(\"NODE:\", node_utterances)\n",
     "        dialogue.append(random.choice(node_utterances))  # Randomly select an utterance\n",
-    "        \n",
+    "\n",
     "        # Mark the current node as visited\n",
     "        visited_nodes.add(current_node)\n",
-    "        \n",
+    "\n",
     "        # Get the next possible nodes to traverse\n",
     "        next_nodes = list(G.successors(current_node))\n",
     "        if not next_nodes:  # If there are no successors, break the loop\n",
     "            break\n",
-    "        \n",
+    "\n",
     "        # Filter out already visited nodes to prevent cycles\n",
     "        next_nodes = [node for node in next_nodes if node not in visited_nodes]\n",
     "        if not next_nodes:  # If all next nodes have been visited, break the loop\n",
     "            break\n",
-    "        \n",
+    "\n",
     "        next_node = random.choice(next_nodes)\n",
-    "        \n",
+    "\n",
     "        # Get the edge utterances between the current node and the next node\n",
-    "        edge_utterances = G[current_node][next_node]['utterances']\n",
+    "        edge_utterances = G[current_node][next_node][\"utterances\"]\n",
     "        # print(\"EDGE:\", edge_utterances)\n",
-    "        dialogue.append(random.choice(edge_utterances)) \n",
+    "        dialogue.append(random.choice(edge_utterances))\n",
     "        # Randomly select the next node to traverse\n",
     "        current_node = next_node\n",
-    "    \n",
+    "\n",
     "    if readable:\n",
     "        out = \"\"\n",
     "        for i in range(len(dialogue)):\n",
@@ -281,7 +308,7 @@
     }
    ],
    "source": [
-    "visualize_graph(graphs[1], \"Test graph\")\n"
+    "visualize_graph(graphs[1], \"Test graph\")"
    ]
   },
   {
@@ -291,11 +318,21 @@
    "outputs": [],
    "source": [
     "class Dialogue(BaseModel):\n",
-    "    sensibility: float = Field(description=\"Sensibility meter float from 0.0 to 1.0. If the dialogue make sense, logical and can be heard in speech between real people value is higher.\")\n",
-    "    comment: str = Field(description=\"Commentary on why this score for the sensibility was made\")\n",
+    "    sensibility: float = Field(\n",
+    "        description=\"Sensibility meter float from 0.0 to 1.0. If the dialogue make sense, logical and can be heard in speech between real people value is higher.\"\n",
+    "    )\n",
+    "    comment: str = Field(\n",
+    "        description=\"Commentary on why this score for the sensibility was made\"\n",
+    "    )\n",
     "\n",
-    "model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=os.getenv(\"OPENAI_API_KEY\"), base_url=os.getenv(\"OPENAI_BASE_URL\"), temperature=0)\n",
-    "check_model = model.with_structured_output(Dialogue)\n"
+    "\n",
+    "model = ChatOpenAI(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0,\n",
+    ")\n",
+    "check_model = model.with_structured_output(Dialogue)"
    ]
   },
   {
@@ -321,7 +358,7 @@
     "    scores[_][\"score\"] = res.sensibility\n",
     "    scores[_][\"comment\"] = res.comment\n",
     "\n",
-    "with open(\"scores.json\", 'w') as f:\n",
+    "with open(\"scores.json\", \"w\") as f:\n",
     "    f.write(json.dumps(scores, indent=2))"
    ]
   },
@@ -331,17 +368,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def augment_data(graph: dict, themes: set, amount: int=5) -> list[dict]:\n",
+    "async def augment_data(graph: dict, themes: set, amount: int = 5) -> list[dict]:\n",
     "    res = []\n",
     "    for theme in themes:\n",
     "        for i in range(amount):\n",
-    "            result = await model.ainvoke(augmentation_prompt.format(THEME=theme, graph=graph))\n",
+    "            result = await model.ainvoke(\n",
+    "                augmentation_prompt.format(THEME=theme, graph=graph)\n",
+    "            )\n",
     "            try:\n",
     "                g = json.loads(result.content)\n",
     "                res.append(g)\n",
     "            except Exception:\n",
     "                print(\"invalid graph\")\n",
-    "    with open(\"augmented_graphs.json\", 'w') as f:\n",
+    "    with open(\"augmented_graphs.json\", \"w\") as f:\n",
     "        f.write(json.dumps(res, indent=2))"
    ]
   },
@@ -360,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('augmented_graphs.json', 'r') as f:\n",
+    "with open(\"augmented_graphs.json\", \"r\") as f:\n",
     "    pass"
    ]
   }
