--- a/experiments/old_experiments/2024.10.15_visualisation/visualise_graphs.ipynb
+++ b/experiments/old_experiments/2024.10.15_visualisation/visualise_graphs.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import json\n",
     "from chatsky_llm_autoconfig.evaluate import visualize_graph\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -17,8 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/data/data.json') as f:\n",
-    "    data = json.load(f)\n"
+    "with open(\n",
+    "    \"/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/data/data.json\"\n",
+    ") as f:\n",
+    "    data = json.load(f)"
    ]
   },
   {
@@ -170,8 +172,8 @@
    "source": [
     "for i in data:\n",
     "    plt.figure(figsize=(20, 10))\n",
-    "    visualize_graph(i['target_graph'], i['samping_method'])\n",
-    "    plt.savefig(f\"img/{i['samping_method']}\")\n"
+    "    visualize_graph(i[\"target_graph\"], i[\"samping_method\"])\n",
+    "    plt.savefig(f\"img/{i['samping_method']}\")"
    ]
   }
  ],
