--- a/experiments/old_experiments/2024.10.20_dialog_graph_synthesis/dialog_graph_synthesis.ipynb
+++ b/experiments/old_experiments/2024.10.20_dialog_graph_synthesis/dialog_graph_synthesis.ipynb
@@ -20,7 +20,8 @@
     "from langchain_openai import ChatOpenAI\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "load_dotenv() "
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -46,7 +47,7 @@
     "from langchain.prompts import PromptTemplate\n",
     "\n",
     "cycle_graph_generation_prompt = PromptTemplate.from_template(\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Create a cyclic dialogue graph where the conversation MUST return to an existing node.\n",
     "\n",
     "    **CRITICAL: Response Specificity**\n",
@@ -86,7 +87,7 @@
     "    7) The cycle point should make logical sense\n",
     "\n",
     "    **Your task is to create a cyclic dialogue graph about the following topic:** {topic}.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     ")"
    ]
   },
@@ -96,21 +97,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.output_parsers import StrOutputParser\n",
     "from pydantic import BaseModel, Field\n",
-    "from typing import List, Optional\n",
+    "from typing import List\n",
     "from langchain_core.output_parsers import JsonOutputParser\n",
+    "\n",
     "\n",
     "class Edge(BaseModel):\n",
     "    source: int = Field(description=\"ID of the source node\")\n",
     "    target: int = Field(description=\"ID of the target node\")\n",
-    "    utterances: str = Field(description=\"User's utterance that triggers this transition\")\n",
+    "    utterances: str = Field(\n",
+    "        description=\"User's utterance that triggers this transition\"\n",
+    "    )\n",
+    "\n",
     "\n",
     "class Node(BaseModel):\n",
     "    id: int = Field(description=\"Unique identifier for the node\")\n",
     "    label: str = Field(description=\"Label describing the node's purpose\")\n",
     "    is_start: bool = Field(description=\"Whether this is the starting node\")\n",
-    "    utterances: List[str] = Field(description=\"Possible assistant responses at this node\")\n",
+    "    utterances: List[str] = Field(\n",
+    "        description=\"Possible assistant responses at this node\"\n",
+    "    )\n",
+    "\n",
     "\n",
     "class DialogueGraph(BaseModel):\n",
     "    edges: List[Edge] = Field(description=\"List of transitions between nodes\")\n",
@@ -120,10 +127,14 @@
     "parser = JsonOutputParser(pydantic_object=DialogueGraph)\n",
     "\n",
     "\n",
-    "model = ChatOpenAI(model=\"gpt-4o\", api_key=os.getenv(\"OPENAI_API_KEY\"), base_url=os.getenv(\"OPENAI_BASE_URL\"), temperature=0)\n",
+    "model = ChatOpenAI(\n",
+    "    model=\"gpt-4o\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0,\n",
+    ")\n",
     "\n",
-    "generate_graph_chain = cycle_graph_generation_prompt | model | parser\n",
-    "\n"
+    "generate_graph_chain = cycle_graph_generation_prompt | model | parser"
    ]
   },
   {
@@ -221,47 +232,48 @@
    "source": [
     "def print_conversation_flow(graph):\n",
     "    print(\"=== Conversation Flow ===\\n\")\n",
-    "    \n",
+    "\n",
     "    # Create a dictionary for quick node lookup\n",
-    "    nodes = {node['id']: node for node in graph['nodes']}\n",
-    "    \n",
+    "    nodes = {node[\"id\"]: node for node in graph[\"nodes\"]}\n",
+    "\n",
     "    # Create adjacency list for edges\n",
     "    edge_dict = {}\n",
-    "    for edge in graph['edges']:\n",
-    "        if edge['source'] not in edge_dict:\n",
-    "            edge_dict[edge['source']] = []\n",
-    "        edge_dict[edge['source']].append(edge)\n",
-    "    \n",
+    "    for edge in graph[\"edges\"]:\n",
+    "        if edge[\"source\"] not in edge_dict:\n",
+    "            edge_dict[edge[\"source\"]] = []\n",
+    "        edge_dict[edge[\"source\"]].append(edge)\n",
+    "\n",
     "    # Find starting node (is_start = true)\n",
-    "    start_node = next(node for node in graph['nodes'] if node.get('is_start', False))\n",
-    "    \n",
+    "    start_node = next(node for node in graph[\"nodes\"] if node.get(\"is_start\", False))\n",
+    "\n",
     "    # Print flow starting from first node\n",
     "    def print_path(node_id, visited_edges=None):\n",
     "        if visited_edges is None:\n",
     "            visited_edges = set()\n",
-    "            \n",
+    "\n",
     "        current_node = nodes[node_id]\n",
     "        outgoing_edges = edge_dict.get(node_id, [])\n",
-    "        \n",
+    "\n",
     "        for edge in outgoing_edges:\n",
     "            edge_key = f\"{edge['source']}-{edge['target']}\"\n",
     "            if edge_key in visited_edges:\n",
     "                print(f\"    [Cycle back to Node {edge['target']}]\\n\")\n",
     "                continue\n",
-    "                \n",
+    "\n",
     "            visited_edges.add(edge_key)\n",
-    "            \n",
+    "\n",
     "            print(f\"Node {node_id} ({current_node['label']}):\")\n",
     "            print(f\"    Assistant: {current_node['utterances'][0]}\")\n",
     "            print(f\"\\nEdge {edge['source']} → {edge['target']}:\")\n",
     "            print(f\"    User: {edge['utterances'][0]}\")\n",
     "            print(f\"\\nNode {edge['target']} ({nodes[edge['target']]['label']}):\")\n",
     "            print(f\"    Assistant: {nodes[edge['target']]['utterances'][0]}\")\n",
-    "            print(\"\\n\" + \"-\"*50 + \"\\n\")\n",
-    "            \n",
-    "            print_path(edge['target'], visited_edges)\n",
-    "    \n",
-    "    print_path(start_node['id'])\n",
+    "            print(\"\\n\" + \"-\" * 50 + \"\\n\")\n",
+    "\n",
+    "            print_path(edge[\"target\"], visited_edges)\n",
+    "\n",
+    "    print_path(start_node[\"id\"])\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "\n",
@@ -287,7 +299,8 @@
    ],
    "source": [
     "from chatsky_llm_autoconfig.graph import Graph\n",
-    "converted_graph =  Graph(graph)\n",
+    "\n",
+    "converted_graph = Graph(graph)\n",
     "converted_graph.visualise()"
    ]
   },
@@ -371,6 +384,7 @@
     "from typing import List, Tuple\n",
     "import os\n",
     "\n",
+    "\n",
     "def is_graph_valid(graph: DialogueGraph, topic: str) -> dict:\n",
     "    \"\"\"\n",
     "    Validates the dialog graph structure and logical transitions between nodes.\n",
@@ -383,14 +397,14 @@
     "        dict: {'isValid': bool, 'description': str}\n",
     "    \"\"\"\n",
     "    # Create a mapping from node IDs to node data for quick access\n",
-    "    node_map = {node['id']: node for node in graph['nodes']}\n",
+    "    node_map = {node[\"id\"]: node for node in graph[\"nodes\"]}\n",
     "    overall_valid = True\n",
     "    descriptions = []\n",
     "\n",
-    "    for edge in graph['edges']:\n",
-    "        source_id = edge['source']\n",
-    "        target_id = edge['target']\n",
-    "        edge_utterances = edge['utterances']\n",
+    "    for edge in graph[\"edges\"]:\n",
+    "        source_id = edge[\"source\"]\n",
+    "        target_id = edge[\"target\"]\n",
+    "        edge_utterances = edge[\"utterances\"]\n",
     "\n",
     "        # Check if source and target nodes exist\n",
     "        if source_id not in node_map:\n",
@@ -410,11 +424,13 @@
     "        target_node = node_map[target_id]\n",
     "\n",
     "        # Get utterances from nodes\n",
-    "        source_utterances = source_node.get('utterances', [])\n",
-    "        target_utterances = target_node.get('utterances', [])\n",
+    "        source_utterances = source_node.get(\"utterances\", [])\n",
+    "        target_utterances = target_node.get(\"utterances\", [])\n",
     "\n",
     "        # Validate the transition\n",
-    "        isValid, description = validate_transition(source_utterances, edge_utterances, target_utterances, topic)\n",
+    "        isValid, description = validate_transition(\n",
+    "            source_utterances, edge_utterances, target_utterances, topic\n",
+    "        )\n",
     "        if not isValid:\n",
     "            overall_valid = False\n",
     "            description = f\"Invalid transition from {source_utterances} to {target_utterances} via edge '{edge_utterances}': {description}\"\n",
@@ -422,10 +438,13 @@
     "            descriptions.append(description)\n",
     "\n",
     "    result = {\n",
-    "        'isValid': overall_valid,\n",
-    "        'description': ' '.join(descriptions) if descriptions else 'All transitions are valid.'\n",
+    "        \"isValid\": overall_valid,\n",
+    "        \"description\": \" \".join(descriptions)\n",
+    "        if descriptions\n",
+    "        else \"All transitions are valid.\",\n",
     "    }\n",
     "    return result\n",
+    "\n",
     "\n",
     "prompt_template = \"\"\"\n",
     "You are given a dialog between assistant and a user.\n",
@@ -456,20 +475,32 @@
     "Your answer:\"\"\"\n",
     "\n",
     "prompt = PromptTemplate(\n",
-    "    input_variables=[\"source_utterances\", \"edge_utterances\", \"target_utterances\", \"topic\"],\n",
+    "    input_variables=[\n",
+    "        \"source_utterances\",\n",
+    "        \"edge_utterances\",\n",
+    "        \"target_utterances\",\n",
+    "        \"topic\",\n",
+    "    ],\n",
     "    template=prompt_template,\n",
     ")\n",
+    "\n",
     "\n",
     "class TransitionValidationResult(BaseModel):\n",
     "    isValid: bool = Field(description=\"Whether the transition is valid or not.\")\n",
     "    description: str = Field(description=\"Explanation of why it's valid or invalid.\")\n",
+    "\n",
     "\n",
     "# Initialize the output parser\n",
     "parser = PydanticOutputParser(pydantic_object=TransitionValidationResult)\n",
     "\n",
     "\n",
     "# Define the validate_transition function\n",
-    "def validate_transition(source_utterances: List[str], edge_utterances: str, target_utterances: List[str], topic: str) -> Tuple[bool, str]:\n",
+    "def validate_transition(\n",
+    "    source_utterances: List[str],\n",
+    "    edge_utterances: str,\n",
+    "    target_utterances: List[str],\n",
+    "    topic: str,\n",
+    ") -> Tuple[bool, str]:\n",
     "    \"\"\"\n",
     "    Validates a single transition in the graph using the language model.\n",
     "\n",
@@ -487,24 +518,27 @@
     "        \"source_utterances\": source_utterances,\n",
     "        \"edge_utterances\": edge_utterances,\n",
     "        \"target_utterances\": target_utterances,\n",
-    "        \"topic\": topic\n",
+    "        \"topic\": topic,\n",
     "    }\n",
-    "    \n",
-    "    model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=os.getenv(\"OPENAI_API_KEY\"), base_url=os.getenv(\"OPENAI_BASE_URL\"), temperature=0)\n",
     "\n",
-    "    \n",
+    "    model = ChatOpenAI(\n",
+    "        model=\"gpt-4o-mini\",\n",
+    "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "        base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "        temperature=0,\n",
+    "    )\n",
+    "\n",
     "    triplet_check_chain = prompt | model | parser\n",
     "\n",
-    "    \n",
     "    response = triplet_check_chain.invoke(input_data)\n",
-    "    \n",
+    "\n",
     "    isValid = response.isValid\n",
     "    description = response.description\n",
     "    return isValid, description\n",
     "\n",
     "\n",
     "result = is_graph_valid(graph, topic)\n",
-    "print(result)\n"
+    "print(result)"
    ]
   },
   {
@@ -520,10 +554,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
     "from chatsky_llm_autoconfig.sample_dialogue import DialogueSampler\n",
     "\n",
-    "converted_graph =  Graph(graph)\n",
+    "converted_graph = Graph(graph)\n",
     "\n",
     "\n",
     "sampler = DialogueSampler()\n",
@@ -584,7 +617,7 @@
    "source": [
     "from langchain.prompts import PromptTemplate\n",
     "from langchain_core.output_parsers import JsonOutputParser\n",
-    "from typing import List, Dict, Any\n",
+    "from typing import List\n",
     "\n",
     "augmentation_prompt = PromptTemplate.from_template(\"\"\"\n",
     "You are tasked with augmenting a dialogue by adding variations to existing utterances while maintaining the original dialogue flow and intent.\n",
@@ -624,30 +657,30 @@
     "]\n",
     "\"\"\")\n",
     "\n",
+    "\n",
     "class DialogueMessage(BaseModel):\n",
     "    text: str\n",
     "    participant: str\n",
     "\n",
+    "\n",
     "class DialogueSequence(BaseModel):\n",
     "    result: List[DialogueMessage]\n",
+    "\n",
     "\n",
     "parser = JsonOutputParser(pydantic_object=DialogueSequence)\n",
     "\n",
     "# Usage\n",
     "model = ChatOpenAI(\n",
-    "    model=\"gpt-4o-mini\", \n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"), \n",
-    "    base_url=os.getenv(\"OPENAI_BASE_URL\"), \n",
-    "    temperature=0.7\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    temperature=0.7,\n",
     ")\n",
     "\n",
     "chain = augmentation_prompt | model | parser\n",
     "\n",
     "\n",
-    "result = chain.invoke({\n",
-    "    \"topic\": topic,\n",
-    "    \"dialogue\": dialogue\n",
-    "})"
+    "result = chain.invoke({\"topic\": topic, \"dialogue\": dialogue})"
    ]
   },
   {
