--- a/experiments/old_experiments/2024.11.14_dialogue2graph/FT_Llama.ipynb
+++ b/experiments/old_experiments/2024.11.14_dialogue2graph/FT_Llama.ipynb
@@ -182,7 +182,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_adapter(\"adapter1\", \"src/slot_dataset.json\", max_steps=10, output_dir=\"models/outputs\")"
+    "train_adapter(\n",
+    "    \"adapter1\", \"src/slot_dataset.json\", max_steps=10, output_dir=\"models/outputs\"\n",
+    ")"
    ]
   },
   {
@@ -205,7 +207,10 @@
     "# Load model\n",
     "max_seq_length = 8192\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
-    "    model_name=\"unsloth/Meta-Llama-3.1-8B-bnb-4bit\", max_seq_length=max_seq_length, load_in_4bit=True, dtype=None\n",
+    "    model_name=\"unsloth/Meta-Llama-3.1-8B-bnb-4bit\",\n",
+    "    max_seq_length=max_seq_length,\n",
+    "    load_in_4bit=True,\n",
+    "    dtype=None,\n",
     ")\n",
     "EOS_TOKEN = tokenizer.eos_token"
    ]
@@ -288,7 +293,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_dataset(\"askatasuna/CycleDialogueGraphs_v1\", token=\"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\")"
+    "dataset = load_dataset(\n",
+    "    \"askatasuna/CycleDialogueGraphs_v1\", token=\"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\"\n",
+    ")"
    ]
   },
   {
@@ -338,19 +345,48 @@
    "source": [
     "graph_example_1 = {\n",
     "    \"edges\": [\n",
-    "        {'source': 1, 'target': 2, 'utterances': ['I want to order from you']},\n",
-    "        {'source': 2, 'target': 3, 'utterances': ['I would like to purchase Pale Fire and Anna Karenina, please']},\n",
+    "        {\"source\": 1, \"target\": 2, \"utterances\": [\"I want to order from you\"]},\n",
+    "        {\n",
+    "            \"source\": 2,\n",
+    "            \"target\": 3,\n",
+    "            \"utterances\": [\n",
+    "                \"I would like to purchase Pale Fire and Anna Karenina, please\"\n",
+    "            ],\n",
+    "        },\n",
     "        {\"source\": 3, \"target\": 4, \"utterances\": [\"With credit card, please\"]},\n",
-    "        {\"source\": 4, \"target\": 2, \"utterances\": [\"Start new order\"]}\n",
+    "        {\"source\": 4, \"target\": 2, \"utterances\": [\"Start new order\"]},\n",
     "    ],\n",
-    "    'nodes':\n",
-    "      [\n",
-    "          {'id': 1, 'label': 'start', 'is_start': True, 'utterances': [ 'How can I help?', 'Hello']},\n",
-    "          {'id': 2, 'label': 'ask_books', 'is_start': False, 'utterances': [ 'What books do you like?']},\n",
-    "          {'id': 3, 'label': 'ask_payment_method', 'is_start': False, 'utterances': [ 'Please, enter the payment method you would like to use: cash or credit card.']},\n",
-    "          {\"id\": 4, \"label\": \"ask_to_redo\", \"is_start\": False, \"utterances\": [ \"Something is wrong, can you please use other payment method or start order again\"]}\n",
-    "      ],\n",
-    "      'reason': \"\"\n",
+    "    \"nodes\": [\n",
+    "        {\n",
+    "            \"id\": 1,\n",
+    "            \"label\": \"start\",\n",
+    "            \"is_start\": True,\n",
+    "            \"utterances\": [\"How can I help?\", \"Hello\"],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 2,\n",
+    "            \"label\": \"ask_books\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\"What books do you like?\"],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 3,\n",
+    "            \"label\": \"ask_payment_method\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"Please, enter the payment method you would like to use: cash or credit card.\"\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 4,\n",
+    "            \"label\": \"ask_to_redo\",\n",
+    "            \"is_start\": False,\n",
+    "            \"utterances\": [\n",
+    "                \"Something is wrong, can you please use other payment method or start order again\"\n",
+    "            ],\n",
+    "        },\n",
+    "    ],\n",
+    "    \"reason\": \"\",\n",
     "}"
    ]
   },
@@ -382,7 +418,7 @@
    "source": [
     "new_data = []\n",
     "for dat in dataset[\"train\"]:\n",
-    "    for dia in dat[\"dialogues\"]: \n",
+    "    for dia in dat[\"dialogues\"]:\n",
     "        dic = {\"graph\": dat[\"graph\"], \"dialogue\": dia[\"messages\"]}\n",
     "        new_data.append(dic)\n",
     "new_data"
@@ -395,6 +431,8 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "\n",
+    "\n",
     "def save_json(data: dict, filename: str) -> None:\n",
     "    with open(filename, \"w\", encoding=\"utf-8\") as file:\n",
     "        json.dump(data, file, indent=4, ensure_ascii=False)"
@@ -406,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_json(new_data,\"dataset.json\")"
+    "save_json(new_data, \"dataset.json\")"
    ]
   },
   {
@@ -435,10 +473,11 @@
    "source": [
     "def formatting_prompts_func(example):\n",
     "    inputs = example[\"dialogue\"]\n",
-    "    outputs=example[\"graph\"]\n",
+    "    outputs = example[\"graph\"]\n",
     "\n",
     "    return {\n",
-    "        \"text_prompt\": graph_generation_prompt.format(graph_example_1, inputs, outputs) + EOS_TOKEN\n",
+    "        \"text_prompt\": graph_generation_prompt.format(graph_example_1, inputs, outputs)\n",
+    "        + EOS_TOKEN\n",
     "    }"
    ]
   },
@@ -569,7 +608,7 @@
     }
    ],
    "source": [
-    "new_dataset[0]['dialogue']"
+    "new_dataset[0][\"dialogue\"]"
    ]
   },
   {
@@ -578,7 +617,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = predict(model, new_dataset[0]['dialogue'])"
+    "res = predict(model, new_dataset[0][\"dialogue\"])"
    ]
   },
   {
@@ -658,8 +697,8 @@
     "    dataset_num_proc=2,\n",
     "    packing=False,  # Can make training 5x faster for short sequences.\n",
     "    args=TrainingArguments(\n",
-    "        per_device_train_batch_size = 2,\n",
-    "        gradient_accumulation_steps = 4,\n",
+    "        per_device_train_batch_size=2,\n",
+    "        gradient_accumulation_steps=4,\n",
     "        # per_device_train_batch_size=8,\n",
     "        # gradient_accumulation_steps=4,\n",
     "        # per_device_eval_batch_size=8,\n",
@@ -730,7 +769,10 @@
     "# Load model\n",
     "max_seq_length = 8192\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
-    "    model_name=\"unsloth/Llama-3.2-3B-Instruct\", max_seq_length=max_seq_length, load_in_4bit=True, dtype=None\n",
+    "    model_name=\"unsloth/Llama-3.2-3B-Instruct\",\n",
+    "    max_seq_length=max_seq_length,\n",
+    "    load_in_4bit=True,\n",
+    "    dtype=None,\n",
     ")\n",
     "EOS_TOKEN = tokenizer.eos_token"
    ]
@@ -817,12 +859,12 @@
     "        # per_device_train_batch_size=8,\n",
     "        # gradient_accumulation_steps=4,\n",
     "        # per_device_eval_batch_size=8,\n",
-    "        per_device_train_batch_size = 2,\n",
-    "        gradient_accumulation_steps = 4,\n",
+    "        per_device_train_batch_size=2,\n",
+    "        gradient_accumulation_steps=4,\n",
     "        warmup_steps=5,\n",
     "        # num_train_epochs = 1, # Set this for 1 full training run.\n",
     "        max_steps=50,\n",
-    "        learning_rate = 2e-4,\n",
+    "        learning_rate=2e-4,\n",
     "        # learning_rate=9e-5,\n",
     "        # eval_steps=5,\n",
     "        fp16=not is_bfloat16_supported(),\n",
@@ -956,43 +998,72 @@
     "pos = 0\n",
     "for dt in tqdm(test_valid[\"train\"].select(range(1000))):\n",
     "    res = predict(model, dt[\"text_prompt\"])\n",
-    "    lst = ast.literal_eval(res[0].rsplit(\"### Output Data:\")[1].strip().replace(\"\\n<|end_of_text|>\", \"\"))\n",
+    "    lst = ast.literal_eval(\n",
+    "        res[0].rsplit(\"### Output Data:\")[1].strip().replace(\"\\n<|end_of_text|>\", \"\")\n",
+    "    )\n",
     "    if dt[\"name\"] in [\"move_forward\", \"move_backward\", \"GO\"]:\n",
     "        distance = unit_conversion(dt[\"distance\"], dt[\"distance_unit\"])\n",
     "        if (\n",
     "            len(lst) == 2\n",
-    "            and any(l[\"name\"] == \"distance\" and distance == l[\"predicted_slot\"] for l in lst)\n",
-    "            and any(l[\"name\"] == \"distance_unit\" and \"метр\" in l[\"predicted_slot\"] for l in lst)\n",
+    "            and any(\n",
+    "                l[\"name\"] == \"distance\" and distance == l[\"predicted_slot\"] for l in lst\n",
+    "            )\n",
+    "            and any(\n",
+    "                l[\"name\"] == \"distance_unit\" and \"метр\" in l[\"predicted_slot\"]\n",
+    "                for l in lst\n",
+    "            )\n",
     "        ):\n",
     "            pos += 1\n",
     "        else:\n",
     "            print(lst, dt[\"phrase\"])\n",
     "    elif dt[\"name\"] in [\"pick_up\"]:\n",
-    "        if len(lst) == 1 and lst[0][\"name\"] == \"box_id\" and dt[\"box_id\"] == lst[0][\"predicted_slot\"]:\n",
+    "        if (\n",
+    "            len(lst) == 1\n",
+    "            and lst[0][\"name\"] == \"box_id\"\n",
+    "            and dt[\"box_id\"] == lst[0][\"predicted_slot\"]\n",
+    "        ):\n",
     "            pos += 1\n",
     "        else:\n",
     "            print(lst, dt[\"phrase\"])\n",
     "    elif dt[\"name\"] in [\"place\"]:\n",
     "        if (\n",
     "            len(lst) == 2\n",
-    "            and any(l[\"name\"] == \"box_id\" and dt[\"box_id\"] == l[\"predicted_slot\"] for l in lst)\n",
-    "            and any(l[\"name\"] == \"waypoint_id\" and dt[\"waypoint_id\"] == l[\"predicted_slot\"] for l in lst)\n",
+    "            and any(\n",
+    "                l[\"name\"] == \"box_id\" and dt[\"box_id\"] == l[\"predicted_slot\"]\n",
+    "                for l in lst\n",
+    "            )\n",
+    "            and any(\n",
+    "                l[\"name\"] == \"waypoint_id\" and dt[\"waypoint_id\"] == l[\"predicted_slot\"]\n",
+    "                for l in lst\n",
+    "            )\n",
     "        ):\n",
     "            pos += 1\n",
     "        else:\n",
     "            print(lst, dt[\"phrase\"])\n",
     "    elif dt[\"name\"] in [\"sit_down\", \"go_to\"]:\n",
-    "        if len(lst) == 1 and lst[0][\"name\"] == \"waypoint_id\" and dt[\"waypoint_id\"] == lst[0][\"predicted_slot\"]:\n",
+    "        if (\n",
+    "            len(lst) == 1\n",
+    "            and lst[0][\"name\"] == \"waypoint_id\"\n",
+    "            and dt[\"waypoint_id\"] == lst[0][\"predicted_slot\"]\n",
+    "        ):\n",
     "            pos += 1\n",
     "        else:\n",
     "            print(lst, dt[\"phrase\"])\n",
     "    elif dt[\"name\"] in [\"say\"]:\n",
-    "        if len(lst) == 1 and lst[0][\"name\"] == \"text\" and dt[\"text\"] == lst[0][\"predicted_slot\"]:\n",
+    "        if (\n",
+    "            len(lst) == 1\n",
+    "            and lst[0][\"name\"] == \"text\"\n",
+    "            and dt[\"text\"] == lst[0][\"predicted_slot\"]\n",
+    "        ):\n",
     "            pos += 1\n",
     "        else:\n",
     "            print(lst, dt[\"phrase\"])\n",
     "    elif dt[\"name\"] in [\"set_point\"]:\n",
-    "        if len(lst) == 1 and lst[0][\"name\"] == \"point\" and dt[\"point\"] == lst[0][\"predicted_slot\"]:\n",
+    "        if (\n",
+    "            len(lst) == 1\n",
+    "            and lst[0][\"name\"] == \"point\"\n",
+    "            and dt[\"point\"] == lst[0][\"predicted_slot\"]\n",
+    "        ):\n",
     "            pos += 1\n",
     "        else:\n",
     "            print(lst, dt[\"phrase\"])\n",
