--- a/experiments/old_experiments/2024.11.14_dialogue2graph/check_data.ipynb
+++ b/experiments/old_experiments/2024.11.14_dialogue2graph/check_data.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai  import ChatOpenAI"
+    "from langchain_openai import ChatOpenAI"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import chatsky_llm_autoconfig.metrics.llm_metrics as llm_metrics\n"
+    "import chatsky_llm_autoconfig.metrics.llm_metrics as llm_metrics"
    ]
   },
   {
@@ -122,7 +122,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read_json(\"../../dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/new_data.json\")"
+    "data = read_json(\n",
+    "    \"../../dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/new_data.json\"\n",
+    ")"
    ]
   },
   {
@@ -234,7 +236,7 @@
     }
    ],
    "source": [
-    "gr = Graph(data[0]['graph'])\n",
+    "gr = Graph(data[0][\"graph\"])\n",
     "gr"
    ]
   },
@@ -282,7 +284,7 @@
     }
    ],
    "source": [
-    "gr.graph_dict['nodes']"
+    "gr.graph_dict[\"nodes\"]"
    ]
   },
   {
@@ -360,19 +362,24 @@
     "results = []\n",
     "for case in tqdm(data):\n",
     "    case_results = {\"topic\": case[\"topic\"]}\n",
-    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case['graph']), model=model)\n",
-    "    case_results[\"are_triplets_valid\"] = triplets['value']\n",
-    "    case_results['are_triplets_valid_details'] = triplets['description']\n",
-    "    themes = llm_metrics.is_theme_valid(G=Graph(case['graph']), topic=case['topic'], model=model)\n",
-    "    case_results['is_theme_valid'] = themes['value']\n",
-    "    case_results['is_theme_valid_details'] = themes['description']\n",
-    "    case_results['all_utterances_present'] = all_utterances_present(G=Graph(case['graph']), dialogues=[Dialogue(messages=x['messages']) for x in case['dialogues']])\n",
+    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case[\"graph\"]), model=model)\n",
+    "    case_results[\"are_triplets_valid\"] = triplets[\"value\"]\n",
+    "    case_results[\"are_triplets_valid_details\"] = triplets[\"description\"]\n",
+    "    themes = llm_metrics.is_theme_valid(\n",
+    "        G=Graph(case[\"graph\"]), topic=case[\"topic\"], model=model\n",
+    "    )\n",
+    "    case_results[\"is_theme_valid\"] = themes[\"value\"]\n",
+    "    case_results[\"is_theme_valid_details\"] = themes[\"description\"]\n",
+    "    case_results[\"all_utterances_present\"] = all_utterances_present(\n",
+    "        G=Graph(case[\"graph\"]),\n",
+    "        dialogues=[Dialogue(messages=x[\"messages\"]) for x in case[\"dialogues\"]],\n",
+    "    )\n",
     "\n",
     "    results.append(case_results)\n",
     "\n",
     "df = pd.DataFrame(results)\n",
     "print(df)\n",
-    "df.to_csv('results.csv')"
+    "df.to_csv(\"results.csv\")"
    ]
   },
   {
@@ -392,7 +399,7 @@
     }
    ],
    "source": [
-    "[r['is_theme_valid'] for r in results]"
+    "[r[\"is_theme_valid\"] for r in results]"
    ]
   },
   {
@@ -412,7 +419,7 @@
     }
    ],
    "source": [
-    "[r['all_utterances_present'] for r in results]"
+    "[r[\"all_utterances_present\"] for r in results]"
    ]
   },
   {
@@ -421,7 +428,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = read_json(\"../../dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/complex_graphs.json\")"
+    "test_data = read_json(\n",
+    "    \"../../dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/complex_graphs.json\"\n",
+    ")"
    ]
   },
   {
@@ -472,7 +481,7 @@
     }
    ],
    "source": [
-    "case['dialogues']"
+    "case[\"dialogues\"]"
    ]
   },
   {
@@ -493,19 +502,24 @@
     "comp_results = []\n",
     "for case in tqdm(test_data):\n",
     "    case_results = {\"topic\": case[\"topic\"]}\n",
-    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case['graph']), model=model)\n",
-    "    case_results[\"are_triplets_valid\"] = triplets['value']\n",
-    "    case_results['are_triplets_valid_details'] = triplets['description']\n",
-    "    themes = llm_metrics.is_theme_valid(G=Graph(case['graph']), topic=case['topic'], model=model)\n",
-    "    case_results['is_theme_valid'] = themes['value']\n",
-    "    case_results['is_theme_valid_details'] = themes['description']\n",
-    "    case_results['all_utterances_present'] = all_utterances_present(G=Graph(case['graph']), dialogues=[Dialogue(messages=x['messages']) for x in case['dialogues']])\n",
+    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case[\"graph\"]), model=model)\n",
+    "    case_results[\"are_triplets_valid\"] = triplets[\"value\"]\n",
+    "    case_results[\"are_triplets_valid_details\"] = triplets[\"description\"]\n",
+    "    themes = llm_metrics.is_theme_valid(\n",
+    "        G=Graph(case[\"graph\"]), topic=case[\"topic\"], model=model\n",
+    "    )\n",
+    "    case_results[\"is_theme_valid\"] = themes[\"value\"]\n",
+    "    case_results[\"is_theme_valid_details\"] = themes[\"description\"]\n",
+    "    case_results[\"all_utterances_present\"] = all_utterances_present(\n",
+    "        G=Graph(case[\"graph\"]),\n",
+    "        dialogues=[Dialogue(messages=x[\"messages\"]) for x in case[\"dialogues\"]],\n",
+    "    )\n",
     "\n",
     "    comp_results.append(case_results)\n",
     "\n",
     "df = pd.DataFrame(comp_results)\n",
     "print(df)\n",
-    "df.to_csv('comp_results.csv')"
+    "df.to_csv(\"comp_results.csv\")"
    ]
   },
   {
@@ -525,7 +539,7 @@
     }
    ],
    "source": [
-    "[r['is_theme_valid'] for r in comp_results]"
+    "[r[\"is_theme_valid\"] for r in comp_results]"
    ]
   },
   {
@@ -545,7 +559,7 @@
     }
    ],
    "source": [
-    "[r['are_triplets_valid'] for r in comp_results]"
+    "[r[\"are_triplets_valid\"] for r in comp_results]"
    ]
   },
   {
@@ -565,7 +579,7 @@
     }
    ],
    "source": [
-    "[r['all_utterances_present'] for r in comp_results]"
+    "[r[\"all_utterances_present\"] for r in comp_results]"
    ]
   },
   {
@@ -584,19 +598,24 @@
     "comp_mini_results = []\n",
     "for case in tqdm(test_data):\n",
     "    case_results = {\"topic\": case[\"topic\"]}\n",
-    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case['graph']), model=model)\n",
-    "    case_results[\"are_triplets_valid\"] = triplets['value']\n",
-    "    case_results['are_triplets_valid_details'] = triplets['description']\n",
-    "    themes = llm_metrics.is_theme_valid(G=Graph(case['graph']), topic=case['topic'], model=model)\n",
-    "    case_results['is_theme_valid'] = themes['value']\n",
-    "    case_results['is_theme_valid_details'] = themes['description']\n",
-    "    case_results['all_utterances_present'] = all_utterances_present(G=Graph(case['graph']), dialogues=[Dialogue(messages=x['messages']) for x in case['dialogues']])\n",
+    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case[\"graph\"]), model=model)\n",
+    "    case_results[\"are_triplets_valid\"] = triplets[\"value\"]\n",
+    "    case_results[\"are_triplets_valid_details\"] = triplets[\"description\"]\n",
+    "    themes = llm_metrics.is_theme_valid(\n",
+    "        G=Graph(case[\"graph\"]), topic=case[\"topic\"], model=model\n",
+    "    )\n",
+    "    case_results[\"is_theme_valid\"] = themes[\"value\"]\n",
+    "    case_results[\"is_theme_valid_details\"] = themes[\"description\"]\n",
+    "    case_results[\"all_utterances_present\"] = all_utterances_present(\n",
+    "        G=Graph(case[\"graph\"]),\n",
+    "        dialogues=[Dialogue(messages=x[\"messages\"]) for x in case[\"dialogues\"]],\n",
+    "    )\n",
     "\n",
     "    comp_mini_results.append(case_results)\n",
     "\n",
     "df = pd.DataFrame(comp_mini_results)\n",
     "print(df)\n",
-    "df.to_csv('comp_mini_results.csv')"
+    "df.to_csv(\"comp_mini_results.csv\")"
    ]
   },
   {
@@ -616,7 +635,7 @@
     }
    ],
    "source": [
-    "[r['is_theme_valid'] for r in comp_mini_results]"
+    "[r[\"is_theme_valid\"] for r in comp_mini_results]"
    ]
   },
   {
@@ -636,7 +655,7 @@
     }
    ],
    "source": [
-    "[r['are_triplets_valid'] for r in comp_mini_results]"
+    "[r[\"are_triplets_valid\"] for r in comp_mini_results]"
    ]
   },
   {
@@ -668,19 +687,24 @@
     "mini_results = []\n",
     "for case in tqdm(data):\n",
     "    case_results = {\"topic\": case[\"topic\"]}\n",
-    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case['graph']), model=model)\n",
-    "    case_results[\"are_triplets_valid\"] = triplets['value']\n",
-    "    case_results['are_triplets_valid_details'] = triplets['description']\n",
-    "    themes = llm_metrics.is_theme_valid(G=Graph(case['graph']), topic=case['topic'], model=model)\n",
-    "    case_results['is_theme_valid'] = themes['value']\n",
-    "    case_results['is_theme_valid_details'] = themes['description']\n",
-    "    case_results['all_utterances_present'] = all_utterances_present(G=Graph(case['graph']), dialogues=[Dialogue(messages=x['messages']) for x in case['dialogues']])\n",
+    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case[\"graph\"]), model=model)\n",
+    "    case_results[\"are_triplets_valid\"] = triplets[\"value\"]\n",
+    "    case_results[\"are_triplets_valid_details\"] = triplets[\"description\"]\n",
+    "    themes = llm_metrics.is_theme_valid(\n",
+    "        G=Graph(case[\"graph\"]), topic=case[\"topic\"], model=model\n",
+    "    )\n",
+    "    case_results[\"is_theme_valid\"] = themes[\"value\"]\n",
+    "    case_results[\"is_theme_valid_details\"] = themes[\"description\"]\n",
+    "    case_results[\"all_utterances_present\"] = all_utterances_present(\n",
+    "        G=Graph(case[\"graph\"]),\n",
+    "        dialogues=[Dialogue(messages=x[\"messages\"]) for x in case[\"dialogues\"]],\n",
+    "    )\n",
     "\n",
     "    mini_results.append(case_results)\n",
     "\n",
     "df = pd.DataFrame(mini_results)\n",
     "print(df)\n",
-    "df.to_csv('mini_results.csv')"
+    "df.to_csv(\"mini_results.csv\")"
    ]
   },
   {
@@ -700,7 +724,7 @@
     }
    ],
    "source": [
-    "[r['is_theme_valid'] for r in mini_results]"
+    "[r[\"is_theme_valid\"] for r in mini_results]"
    ]
   },
   {
@@ -720,7 +744,7 @@
     }
    ],
    "source": [
-    "[r['are_triplets_valid'] for r in mini_results]"
+    "[r[\"are_triplets_valid\"] for r in mini_results]"
    ]
   },
   {
@@ -731,14 +755,13 @@
    "source": [
     "dialogue_results = []\n",
     "for case in tqdm(data):\n",
-    "\n",
     "    for dialogue in case[\"dialogues\"]:\n",
     "        case_results = {\"topic\": case[\"topic\"]}\n",
     "        res = llm_metrics.is_dialogue_valid(dialogue[\"messages\"], model=model)\n",
-    "        case_results[\"is_dialogue_valid\"] = res['value']\n",
-    "        case_results['is_dialogue_valid_details'] = res['description']\n",
+    "        case_results[\"is_dialogue_valid\"] = res[\"value\"]\n",
+    "        case_results[\"is_dialogue_valid_details\"] = res[\"description\"]\n",
     "\n",
-    "        dialogue_results.append(case_results)\n"
+    "        dialogue_results.append(case_results)"
    ]
   },
   {
@@ -1008,7 +1031,7 @@
    "source": [
     "df = pd.DataFrame(dialogue_results)\n",
     "print(df)\n",
-    "df.to_csv('dialogue_results.csv')"
+    "df.to_csv(\"dialogue_results.csv\")"
    ]
   },
   {
@@ -1017,20 +1040,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read_json(\"../../dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/complex_graphs.json\")\n",
+    "data = read_json(\n",
+    "    \"../../dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/complex_graphs.json\"\n",
+    ")\n",
     "dialogue_results = []\n",
     "for case in tqdm(data):\n",
-    "\n",
     "    for dialogue in case[\"dialogues\"]:\n",
     "        case_results = {\"topic\": case[\"topic\"]}\n",
     "        res = llm_metrics.is_dialogue_valid(dialogue[\"messages\"], model=model)\n",
-    "        case_results[\"is_dialogue_valid\"] = res['value']\n",
-    "        case_results['is_dialogue_valid_details'] = res['description']\n",
+    "        case_results[\"is_dialogue_valid\"] = res[\"value\"]\n",
+    "        case_results[\"is_dialogue_valid_details\"] = res[\"description\"]\n",
     "\n",
     "        dialogue_results.append(case_results)\n",
     "df = pd.DataFrame(dialogue_results)\n",
     "print(df)\n",
-    "df.to_csv('dialogue_complex_results.csv')"
+    "df.to_csv(\"dialogue_complex_results.csv\")"
    ]
   }
  ],
