--- a/experiments/old_experiments/2024.11.17_concatenating_subchains_prompt/main.ipynb
+++ b/experiments/old_experiments/2024.11.17_concatenating_subchains_prompt/main.ipynb
@@ -25,8 +25,8 @@
     "from chatsky_llm_autoconfig.graph import Graph, BaseGraph\n",
     "\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain_core.output_parsers import JsonOutputParser\n",
     "from langchain_openai import ChatOpenAI\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -61,25 +61,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_dialogue = Dialogue(messages=[\n",
-    "    # DialogueMessage(text=\"Hello\", participant=\"user\"),\n",
-    "    DialogueMessage(text=\"Hello, how can I help?\", participant=\"assistant\"),\n",
-    "    DialogueMessage(text=\"I want to take a book\", participant=\"user\"),\n",
-    "    DialogueMessage(text=\"Which author are you interested in?\", participant=\"assistant\"),\n",
-    "    DialogueMessage(text=\"Arseniy Tarkovsky\", participant=\"user\"),\n",
-    "    DialogueMessage(text=\"Here you are\", participant=\"assistant\"),\n",
-    "])\n",
+    "original_dialogue = Dialogue(\n",
+    "    messages=[\n",
+    "        # DialogueMessage(text=\"Hello\", participant=\"user\"),\n",
+    "        DialogueMessage(text=\"Hello, how can I help?\", participant=\"assistant\"),\n",
+    "        DialogueMessage(text=\"I want to take a book\", participant=\"user\"),\n",
+    "        DialogueMessage(\n",
+    "            text=\"Which author are you interested in?\", participant=\"assistant\"\n",
+    "        ),\n",
+    "        DialogueMessage(text=\"Arseniy Tarkovsky\", participant=\"user\"),\n",
+    "        DialogueMessage(text=\"Here you are\", participant=\"assistant\"),\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "additional_dialogue = Dialogue(messages=[\n",
-    "    # DialogueMessage(text=\"Hello\", participant=\"user\"),\n",
-    "    DialogueMessage(text=\"Hello, how can I help?\", participant=\"assistant\"),\n",
-    "    DialogueMessage(text=\"I want to take a magazine\", participant=\"user\"),\n",
-    "    DialogueMessage(text=\"Which magazine are you interested in?\", participant=\"assistant\"),\n",
-    "    DialogueMessage(text=\"Vogue\", participant=\"user\"),\n",
-    "    DialogueMessage(text=\"Which period are you interested in?\", participant=\"assistant\"),\n",
-    "    DialogueMessage(text=\"October 1987\", participant=\"user\"),\n",
-    "    DialogueMessage(text=\"Here you are\", participant=\"assistant\"),\n",
-    "])"
+    "additional_dialogue = Dialogue(\n",
+    "    messages=[\n",
+    "        # DialogueMessage(text=\"Hello\", participant=\"user\"),\n",
+    "        DialogueMessage(text=\"Hello, how can I help?\", participant=\"assistant\"),\n",
+    "        DialogueMessage(text=\"I want to take a magazine\", participant=\"user\"),\n",
+    "        DialogueMessage(\n",
+    "            text=\"Which magazine are you interested in?\", participant=\"assistant\"\n",
+    "        ),\n",
+    "        DialogueMessage(text=\"Vogue\", participant=\"user\"),\n",
+    "        DialogueMessage(\n",
+    "            text=\"Which period are you interested in?\", participant=\"assistant\"\n",
+    "        ),\n",
+    "        DialogueMessage(text=\"October 1987\", participant=\"user\"),\n",
+    "        DialogueMessage(text=\"Here you are\", participant=\"assistant\"),\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -88,50 +98,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_graph = Graph(graph_dict={\n",
-    "    \"nodes\": [\n",
-    "        {\n",
-    "            \"id\": 1,\n",
-    "            \"label\": \"start\",\n",
-    "            \"is_start\": True,\n",
-    "            \"utterances\": [\n",
-    "                \"Hello, how can I help?\"\n",
-    "            ]\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\": 2,\n",
-    "            \"label\": \"ask_author\",\n",
-    "            \"is_start\": False,\n",
-    "            \"utterances\": [\n",
-    "                \"Which author are you interested in?\"\n",
-    "            ]\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\": 3,\n",
-    "            \"label\": \"end\",\n",
-    "            \"is_start\": False,\n",
-    "            \"utterances\": [\n",
-    "                \"Here you are\"\n",
-    "            ]\n",
-    "        },\n",
-    "    ],\n",
-    "    \"edges\": [\n",
-    "        {\n",
-    "            \"utterances\": [\n",
-    "                \"I want to take a book\"\n",
-    "            ],\n",
-    "            \"source\": 1,\n",
-    "            \"target\": 2\n",
-    "        },\n",
-    "        {\n",
-    "            \"utterances\": [\n",
-    "                \"Arseniy Tarkovsky\"\n",
-    "            ],\n",
-    "            \"source\": 2,\n",
-    "            \"target\": 3\n",
-    "        },\n",
-    "    ]\n",
-    "})"
+    "original_graph = Graph(\n",
+    "    graph_dict={\n",
+    "        \"nodes\": [\n",
+    "            {\n",
+    "                \"id\": 1,\n",
+    "                \"label\": \"start\",\n",
+    "                \"is_start\": True,\n",
+    "                \"utterances\": [\"Hello, how can I help?\"],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": 2,\n",
+    "                \"label\": \"ask_author\",\n",
+    "                \"is_start\": False,\n",
+    "                \"utterances\": [\"Which author are you interested in?\"],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": 3,\n",
+    "                \"label\": \"end\",\n",
+    "                \"is_start\": False,\n",
+    "                \"utterances\": [\"Here you are\"],\n",
+    "            },\n",
+    "        ],\n",
+    "        \"edges\": [\n",
+    "            {\"utterances\": [\"I want to take a book\"], \"source\": 1, \"target\": 2},\n",
+    "            {\"utterances\": [\"Arseniy Tarkovsky\"], \"source\": 2, \"target\": 3},\n",
+    "        ],\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -162,6 +156,7 @@
    "source": [
     "class AppendChain(GraphExtender):\n",
     "    prompt: str = \"\"\n",
+    "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.prompt = PromptTemplate.from_template(\n",
@@ -190,14 +185,25 @@
     "\n",
     "    def invoke(self, dialogue: Dialogue, graph: BaseGraph) -> BaseGraph:\n",
     "        # parser = JsonOutputParser(pydantic_object=DialogueGraph)\n",
-    "        model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=os.getenv(\"OPENAI_API_KEY\"), base_url=os.getenv(\"OPENAI_BASE_URL\"), temperature=0)\n",
+    "        model = ChatOpenAI(\n",
+    "            model=\"gpt-4o-mini\",\n",
+    "            api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "            base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "            temperature=0,\n",
+    "        )\n",
     "        chain = self.prompt | model\n",
-    "        generated_graph = chain.invoke({\"orig_dial\": original_dialogue, \"orig_graph\": original_graph.graph_dict, \"new_dial\": additional_dialogue})\n",
+    "        generated_graph = chain.invoke(\n",
+    "            {\n",
+    "                \"orig_dial\": original_dialogue,\n",
+    "                \"orig_graph\": original_graph.graph_dict,\n",
+    "                \"new_dial\": additional_dialogue,\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "        return Graph(graph_dict=json.loads(generated_graph.content))\n",
     "\n",
     "    async def ainvoke(self, dialogue: Dialogue, graph: BaseGraph) -> BaseGraph:\n",
-    "        raise NotImplementedError\n"
+    "        raise NotImplementedError"
    ]
   },
   {
