--- a/experiments/old_experiments/2024.11.24_creating_a_dataset/main.ipynb
+++ b/experiments/old_experiments/2024.11.24_creating_a_dataset/main.ipynb
@@ -1037,7 +1037,7 @@
     }
    ],
    "source": [
-    "with open('dialogue_dataset_10_topics_3_dialogue.json') as f:\n",
+    "with open(\"dialogue_dataset_10_topics_3_dialogue.json\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "data"
