--- a/experiments/old_experiments/2024.11.27_triplet_check_impovement/triplet_check_impovement.ipynb
+++ b/experiments/old_experiments/2024.11.27_triplet_check_impovement/triplet_check_impovement.ipynb
@@ -20,7 +20,8 @@
     "from langchain_openai import ChatOpenAI\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "load_dotenv() "
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -39,7 +40,7 @@
     "from langchain.prompts import PromptTemplate\n",
     "\n",
     "cycle_graph_one_utter = PromptTemplate.from_template(\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Create a natural dialogue graph that represents any business conversation with logical cycles.\n",
     "\n",
     "    Here's an example of a clothing store conversation flow:\n",
@@ -88,12 +89,12 @@
     "\n",
     "    Create a dialogue graph for topic: {topic}\n",
     "    Return only valid JSON matching the format above.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     ")\n",
     "\n",
     "\n",
     "cycle_graph_two_utter = PromptTemplate.from_template(\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Create a natural dialogue graph that represents any business conversation with logical cycles.\n",
     "    Each node and edge should contain exactly 2 utterances that mean the same thing but are phrased differently.\n",
     "\n",
@@ -172,7 +173,7 @@
     "\n",
     "    Create a dialogue graph for topic: {topic}\n",
     "    Return only valid JSON matching the format above.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     ")"
    ]
   },
@@ -235,89 +236,88 @@
     "from chatsky_llm_autoconfig.algorithms.dialogue_generation import DialogueSampler\n",
     "from chatsky_llm_autoconfig.algorithms.topic_graph_generation import CycleGraphGenerator\n",
     "from chatsky_llm_autoconfig.metrics.llm_metrics import are_triplets_valid\n",
-    "from langchain_openai import ChatOpenAI\n",
     "from typing import List, Dict, Any, Tuple\n",
-    "import os\n",
     "import json\n",
     "from datetime import datetime\n",
     "from pathlib import Path\n",
     "\n",
+    "\n",
     "def generate_and_validate_dialogues(\n",
-    "    topics: List[str],\n",
-    "    output_dir: str = \"generated_datasets_two_utter\"\n",
+    "    topics: List[str], output_dir: str = \"generated_datasets_two_utter\"\n",
     ") -> Tuple[List[Dict[str, Any]], List[Dict[str, Any]]]:\n",
     "    # Create output directory if it doesn't exist\n",
     "    Path(output_dir).mkdir(parents=True, exist_ok=True)\n",
-    "    \n",
+    "\n",
     "    # Initialize components with two utterance prompt\n",
     "    graph_generator = CycleGraphGenerator(prompt=cycle_graph_two_utter)\n",
     "    sampler = DialogueSampler()\n",
-    "    \n",
+    "\n",
     "    model = ChatOpenAI(\n",
-    "        model='gpt-4',\n",
+    "        model=\"gpt-4\",\n",
     "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
     "        base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
-    "        temperature=0\n",
+    "        temperature=0,\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    valid_results = []\n",
     "    invalid_results = []\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "    for topic in topics:\n",
     "        try:\n",
     "            # Generate graph and validate\n",
     "            graph = graph_generator.invoke(topic=topic)\n",
     "            validation_result = are_triplets_valid(graph, model, topic)\n",
-    "            \n",
+    "\n",
     "            print(f\"Topic: {topic}\")\n",
     "            print(f\"Validation result: {validation_result}\")\n",
-    "            \n",
+    "\n",
     "            # Sample dialogue from the graph\n",
     "            sampled_dialogues = sampler.invoke(graph, 1, -1)\n",
-    "            \n",
+    "\n",
     "            result_entry = {\n",
     "                \"graph\": graph.graph_dict,\n",
     "                \"topic\": topic,\n",
-    "                \"dialogues\": [i.model_dump() for i in  sampled_dialogues],\n",
-    "                \"validation_result\": validation_result\n",
+    "                \"dialogues\": [i.model_dump() for i in sampled_dialogues],\n",
+    "                \"validation_result\": validation_result,\n",
     "            }\n",
-    "            \n",
-    "            \n",
-    "            \n",
+    "\n",
     "            # Sort into valid/invalid collections\n",
     "            if validation_result[\"value\"]:\n",
     "                valid_results.append(result_entry)\n",
-    "                print(f\"✅ Valid dialogue generated for topic: {topic} (double utterance)\")\n",
+    "                print(\n",
+    "                    f\"✅ Valid dialogue generated for topic: {topic} (double utterance)\"\n",
+    "                )\n",
     "            else:\n",
     "                invalid_results.append(result_entry)\n",
-    "                print(f\"❌ Invalid dialogue generated for topic: {topic} (double utterance)\")\n",
-    "                \n",
+    "                print(\n",
+    "                    f\"❌ Invalid dialogue generated for topic: {topic} (double utterance)\"\n",
+    "                )\n",
+    "\n",
     "        except Exception as e:\n",
     "            print(f\"Error processing topic {topic}: {str(e)}\")\n",
     "            continue\n",
-    "    \n",
+    "\n",
     "    # Save results to JSON files with timestamp\n",
     "    timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "    \n",
+    "\n",
     "    valid_file = Path(output_dir) / f\"valid_dialogues_two_utter_{timestamp}.json\"\n",
     "    invalid_file = Path(output_dir) / f\"invalid_dialogues_two_utter_{timestamp}.json\"\n",
-    "    \n",
-    "    with open(valid_file, 'w', encoding='utf-8') as f:\n",
+    "\n",
+    "    with open(valid_file, \"w\", encoding=\"utf-8\") as f:\n",
     "        json.dump(valid_results, f, ensure_ascii=False, indent=2)\n",
-    "    \n",
-    "    with open(invalid_file, 'w', encoding='utf-8') as f:\n",
+    "\n",
+    "    with open(invalid_file, \"w\", encoding=\"utf-8\") as f:\n",
     "        json.dump(invalid_results, f, ensure_ascii=False, indent=2)\n",
-    "        \n",
-    "    print(f\"\\nGeneration Summary (Double Utterance):\")\n",
+    "\n",
+    "    print(\"\\nGeneration Summary (Double Utterance):\")\n",
     "    print(f\"Valid dialogues: {len(valid_results)}\")\n",
     "    print(f\"Invalid dialogues: {len(invalid_results)}\")\n",
-    "    print(f\"\\nResults saved to:\")\n",
+    "    print(\"\\nResults saved to:\")\n",
     "    print(f\"Valid: {valid_file}\")\n",
     "    print(f\"Invalid: {invalid_file}\")\n",
-    "    \n",
+    "\n",
     "    return valid_results, invalid_results\n",
+    "\n",
     "\n",
     "# Extended list of topics\n",
     "topics = [\n",
@@ -810,10 +810,7 @@
     }
    ],
    "source": [
-    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import DialogueSampler\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
-    "import json\n",
-    "from pathlib import Path\n",
     "\n",
     "# Initialize sampler\n",
     "sampler = DialogueSampler()\n",
@@ -825,7 +822,7 @@
     "for json_path in json_files:\n",
     "    print(f\"\\nProcessing file: {json_path.name}\")\n",
     "    print(\"=\" * 80)\n",
-    "    \n",
+    "\n",
     "    # Load JSON file\n",
     "    with open(json_path, \"r\") as f:\n",
     "        data = json.load(f)\n",
@@ -834,11 +831,11 @@
     "    for entry in data:\n",
     "        print(f\"\\nTopic: {entry['topic']}\")\n",
     "        graph = Graph(entry[\"graph\"])\n",
-    "        \n",
+    "\n",
     "        # Sample different paths\n",
     "        for i in range(3):\n",
     "            dialogue = sampler.invoke(graph, 1, -1)[0]\n",
-    "            print(f\"\\nPath {i+1}:\")\n",
+    "            print(f\"\\nPath {i + 1}:\")\n",
     "            for message in dialogue.messages:\n",
     "                print(f\"- {message}\")\n",
     "        print(\"-\" * 50)"
@@ -861,17 +858,19 @@
     "from pathlib import Path\n",
     "from langchain_core.language_models.chat_models import BaseChatModel\n",
     "\n",
+    "\n",
     "def are_triplets_valid_new(G: Graph, model: BaseChatModel) -> dict[str]:\n",
     "    \"\"\"\n",
     "    Validates dialogue graph structure and logical transitions between nodes.\n",
-    "    \n",
+    "\n",
     "    Parameters:\n",
     "        G (BaseGraph): The dialogue graph to validate\n",
     "        model (BaseChatModel): The LLM model to use for validation\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "        dict: {'value': bool, 'description': str}\n",
     "    \"\"\"\n",
+    "\n",
     "    # Define validation result model\n",
     "    class TransitionValidationResult(BaseModel):\n",
     "        isValid: bool = Field(description=\"Whether the transition is valid or not\")\n",
@@ -901,27 +900,34 @@
     "    \"\"\"\n",
     "\n",
     "    triplet_validate_prompt = PromptTemplate(\n",
-    "        input_variables=[\"json_graph\", \"source_utterances\", \"edge_utterances\", \"target_utterances\"],\n",
-    "        template=triplet_validate_prompt_template\n",
+    "        input_variables=[\n",
+    "            \"json_graph\",\n",
+    "            \"source_utterances\",\n",
+    "            \"edge_utterances\",\n",
+    "            \"target_utterances\",\n",
+    "        ],\n",
+    "        template=triplet_validate_prompt_template,\n",
     "    )\n",
     "\n",
     "    parser = PydanticOutputParser(pydantic_object=TransitionValidationResult)\n",
-    "    \n",
+    "\n",
     "    # Convert graph to JSON string\n",
     "    graph_json = json.dumps(G.graph_dict)\n",
-    "    \n",
+    "\n",
     "    # Create node mapping\n",
     "    node_map = {node[\"id\"]: node for node in G.graph_dict[\"nodes\"]}\n",
-    "    \n",
+    "\n",
     "    overall_valid = True\n",
     "    descriptions = []\n",
     "\n",
     "    for edge in G.graph_dict[\"edges\"]:\n",
     "        source_id = edge[\"source\"]\n",
     "        target_id = edge[\"target\"]\n",
-    "        \n",
+    "\n",
     "        if source_id not in node_map or target_id not in node_map:\n",
-    "            description = f\"Invalid edge: missing node reference {source_id} -> {target_id}\"\n",
+    "            description = (\n",
+    "                f\"Invalid edge: missing node reference {source_id} -> {target_id}\"\n",
+    "            )\n",
     "            overall_valid = False\n",
     "            descriptions.append(description)\n",
     "            continue\n",
@@ -936,11 +942,11 @@
     "            \"json_graph\": graph_json,\n",
     "            \"source_utterances\": source_utterances,\n",
     "            \"edge_utterances\": edge_utterances,\n",
-    "            \"target_utterances\": target_utterances\n",
+    "            \"target_utterances\": target_utterances,\n",
     "        }\n",
     "\n",
     "        # print(triplet_validate_prompt.format(**input_data))\n",
-    "        \n",
+    "\n",
     "        # Run validation\n",
     "        triplet_check_chain = triplet_validate_prompt | model | parser\n",
     "        response = triplet_check_chain.invoke(input_data)\n",
@@ -953,9 +959,11 @@
     "\n",
     "    result = {\n",
     "        \"value\": overall_valid,\n",
-    "        \"description\": \" \".join(descriptions) if descriptions else \"All transitions are valid.\"\n",
+    "        \"description\": \" \".join(descriptions)\n",
+    "        if descriptions\n",
+    "        else \"All transitions are valid.\",\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    return result"
    ]
   },
@@ -966,41 +974,44 @@
    "outputs": [],
    "source": [
     "from chatsky_llm_autoconfig.graph import Graph\n",
-    "from langchain_openai import ChatOpenAI\n",
     "import json\n",
-    "import os\n",
+    "\n",
     "\n",
     "def evaluate_triplet_validation(dataset_type: str, file_path: str, is_old: bool):\n",
     "    model = ChatOpenAI(\n",
-    "        model='gpt-4o-mini',\n",
+    "        model=\"gpt-4o-mini\",\n",
     "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
     "        base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
-    "        temperature=0\n",
+    "        temperature=0,\n",
     "    )\n",
-    "    \n",
-    "    with open(file_path, 'r') as f:\n",
+    "\n",
+    "    with open(file_path, \"r\") as f:\n",
     "        data = json.load(f)\n",
-    "    \n",
+    "\n",
     "    total_graphs = len(data)\n",
     "    matches = 0\n",
-    "    \n",
+    "\n",
     "    for entry in data:\n",
-    "        graph = Graph(entry['graph'])\n",
-    "        \n",
-    "        validation_result =  are_triplets_valid_new(graph, model) if not is_old else are_triplets_valid(graph, model, entry['topic'])\n",
-    "        \n",
+    "        graph = Graph(entry[\"graph\"])\n",
+    "\n",
+    "        validation_result = (\n",
+    "            are_triplets_valid_new(graph, model)\n",
+    "            if not is_old\n",
+    "            else are_triplets_valid(graph, model, entry[\"topic\"])\n",
+    "        )\n",
+    "\n",
     "        # For valid dataset, we expect True results\n",
     "        # For invalid dataset, we expect False results\n",
     "        expected_result = True if dataset_type == \"valid\" else False\n",
-    "        if validation_result['value'] == expected_result:\n",
+    "        if validation_result[\"value\"] == expected_result:\n",
     "            matches += 1\n",
-    "    \n",
+    "\n",
     "    match_rate = matches / total_graphs if total_graphs > 0 else 0\n",
-    "    \n",
+    "\n",
     "    print(f\"\\nResults for {dataset_type} dataset:\")\n",
     "    print(f\"Total graphs: {total_graphs}\")\n",
     "    print(f\"Correct predictions: {matches}\")\n",
-    "    print(f\"Match rate: {match_rate:.2%}\")\n"
+    "    print(f\"Match rate: {match_rate:.2%}\")"
    ]
   },
   {
@@ -1109,7 +1120,9 @@
    ],
    "source": [
     "# Test both datasets\n",
-    "evaluate_triplet_validation(\"valid\", \"generated_datasets_one_utter/valid_dialogues.json\")"
+    "evaluate_triplet_validation(\n",
+    "    \"valid\", \"generated_datasets_one_utter/valid_dialogues.json\"\n",
+    ")"
    ]
   },
   {
@@ -1191,7 +1204,9 @@
     }
    ],
    "source": [
-    "evaluate_triplet_validation(\"invalid\", \"generated_datasets_one_utter/invalid_dialogues.json\")"
+    "evaluate_triplet_validation(\n",
+    "    \"invalid\", \"generated_datasets_one_utter/invalid_dialogues.json\"\n",
+    ")"
    ]
   },
   {
@@ -1247,7 +1262,9 @@
     }
    ],
    "source": [
-    "evaluate_triplet_validation(\"valid\", \"generated_datasets_two_utter/valid_dialogues.json\")"
+    "evaluate_triplet_validation(\n",
+    "    \"valid\", \"generated_datasets_two_utter/valid_dialogues.json\"\n",
+    ")"
    ]
   },
   {
@@ -1268,7 +1285,9 @@
     }
    ],
    "source": [
-    "evaluate_triplet_validation(\"invalid\", \"generated_datasets_two_utter/invalid_dialogues.json\", False)"
+    "evaluate_triplet_validation(\n",
+    "    \"invalid\", \"generated_datasets_two_utter/invalid_dialogues.json\", False\n",
+    ")"
    ]
   },
   {
@@ -1289,9 +1308,10 @@
     }
    ],
    "source": [
-    "from chatsky_llm_autoconfig.metrics.llm_metrics import are_triplets_valid\n",
     "\n",
-    "evaluate_triplet_validation(\"invalid\", \"generated_datasets_one_utter/invalid_dialogues.json\", True)"
+    "evaluate_triplet_validation(\n",
+    "    \"invalid\", \"generated_datasets_one_utter/invalid_dialogues.json\", True\n",
+    ")"
    ]
   },
   {
@@ -1312,7 +1332,9 @@
     }
    ],
    "source": [
-    "evaluate_triplet_validation(\"valid\", \"generated_datasets_one_utter/valid_dialogues.json\", True)"
+    "evaluate_triplet_validation(\n",
+    "    \"valid\", \"generated_datasets_one_utter/valid_dialogues.json\", True\n",
+    ")"
    ]
   },
   {
@@ -1333,7 +1355,9 @@
     }
    ],
    "source": [
-    "evaluate_triplet_validation(\"invalid\", \"generated_datasets_two_utter/invalid_dialogues.json\", True)"
+    "evaluate_triplet_validation(\n",
+    "    \"invalid\", \"generated_datasets_two_utter/invalid_dialogues.json\", True\n",
+    ")"
    ]
   },
   {
@@ -1354,7 +1378,9 @@
     }
    ],
    "source": [
-    "evaluate_triplet_validation(\"valid\", \"generated_datasets_two_utter/valid_dialogues.json\", True)"
+    "evaluate_triplet_validation(\n",
+    "    \"valid\", \"generated_datasets_two_utter/valid_dialogues.json\", True\n",
+    ")"
    ]
   }
  ],
