--- a/experiments/old_experiments/2024.12.10_complex_graph_gen/complex_graph_gen.ipynb
+++ b/experiments/old_experiments/2024.12.10_complex_graph_gen/complex_graph_gen.ipynb
@@ -20,7 +20,8 @@
     "from langchain_openai import ChatOpenAI\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "load_dotenv() "
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -85,71 +86,74 @@
     "from chatsky_llm_autoconfig.algorithms.dialogue_generation import DialogueSampler\n",
     "from chatsky_llm_autoconfig.algorithms.topic_graph_generation import CycleGraphGenerator\n",
     "from chatsky_llm_autoconfig.metrics.llm_metrics import are_triplets_valid\n",
-    "from langchain_openai import ChatOpenAI\n",
     "from pathlib import Path\n",
-    "import os\n",
     "import json\n",
     "from datetime import datetime\n",
     "\n",
     "\n",
-    "def generate_valid_dialogues(topics: list[str], output_dir: str = \"generated_datasets\") -> None:\n",
+    "def generate_valid_dialogues(\n",
+    "    topics: list[str], output_dir: str = \"generated_datasets\"\n",
+    ") -> None:\n",
     "    # Setup\n",
     "    Path(output_dir).mkdir(exist_ok=True)\n",
-    "    \n",
+    "\n",
     "    # Initialize with default prompt if complex_graph_prompt is not defined\n",
-    "    graph_generator = CycleGraphGenerator(prompt=simple_graph_prompt)  # Remove prompt parameter if not needed\n",
+    "    graph_generator = CycleGraphGenerator(\n",
+    "        prompt=simple_graph_prompt\n",
+    "    )  # Remove prompt parameter if not needed\n",
     "    sampler = DialogueSampler()\n",
     "    gen_model = ChatOpenAI(\n",
-    "        model='o1-mini',\n",
+    "        model=\"o1-mini\",\n",
     "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
     "        base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    valid_model = ChatOpenAI(\n",
-    "        model='gpt-4o',\n",
+    "        model=\"gpt-4o\",\n",
     "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
     "        base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    valid_results = []\n",
-    "    \n",
+    "\n",
     "    # Generate and validate graphs\n",
     "    for topic in topics:\n",
     "        try:\n",
     "            # Generate and validate using the model name from your ChatOpenAI instance\n",
     "            graph = graph_generator.invoke(topic=topic, model=gen_model)\n",
     "            validation_result = are_triplets_valid(graph, valid_model)\n",
-    "            \n",
+    "\n",
     "            print(f\"Topic: {topic}\")\n",
     "            print(f\"Validation result: {validation_result}\")\n",
-    "            \n",
+    "\n",
     "            # If valid, sample dialogue and save\n",
     "            if validation_result[\"value\"]:\n",
     "                sampled_dialogues = sampler.invoke(graph, 1, -1)\n",
-    "                valid_results.append({\n",
-    "                    \"graph\": graph.graph_dict,\n",
-    "                    \"topic\": topic,\n",
-    "                    \"dialogues\": [d.model_dump() for d in sampled_dialogues],\n",
-    "                    \"validation_result\": validation_result\n",
-    "                })\n",
+    "                valid_results.append(\n",
+    "                    {\n",
+    "                        \"graph\": graph.graph_dict,\n",
+    "                        \"topic\": topic,\n",
+    "                        \"dialogues\": [d.model_dump() for d in sampled_dialogues],\n",
+    "                        \"validation_result\": validation_result,\n",
+    "                    }\n",
+    "                )\n",
     "                print(f\"✅ Valid dialogue generated for topic: {topic}\")\n",
     "            else:\n",
     "                print(f\"❌ Invalid dialogue for topic: {topic}\")\n",
-    "                \n",
+    "\n",
     "        except Exception as e:\n",
     "            print(f\"Error processing {topic}: {str(e)}\")\n",
     "            continue\n",
     "\n",
     "    # Save results\n",
     "    if valid_results:\n",
-    "        output_file = Path(output_dir) / f\"valid_dialogues_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\"\n",
-    "        with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "        output_file = (\n",
+    "            Path(output_dir)\n",
+    "            / f\"valid_dialogues_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\"\n",
+    "        )\n",
+    "        with open(output_file, \"w\", encoding=\"utf-8\") as f:\n",
     "            json.dump(valid_results, f, ensure_ascii=False, indent=2)\n",
-    "        print(f\"\\nSaved {len(valid_results)} valid dialogues to: {output_file}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "                "
+    "        print(f\"\\nSaved {len(valid_results)} valid dialogues to: {output_file}\")"
    ]
   },
   {
@@ -169,7 +173,7 @@
     "    \"insurance policy purchase\",\n",
     "    \"pet grooming service\",\n",
     "    \"moving service arrangement\",\n",
-    "    \"home cleaning service\"\n",
+    "    \"home cleaning service\",\n",
     "]\n",
     "\n",
     "\n",
@@ -182,10 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import DialogueSampler\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
-    "import json\n",
-    "from pathlib import Path\n",
     "\n",
     "# Initialize sampler\n",
     "sampler = DialogueSampler()\n",
@@ -197,7 +198,7 @@
     "for json_path in json_files:\n",
     "    print(f\"\\nProcessing file: {json_path.name}\")\n",
     "    print(\"=\" * 80)\n",
-    "    \n",
+    "\n",
     "    # Load JSON file\n",
     "    with open(json_path, \"r\") as f:\n",
     "        data = json.load(f)\n",
@@ -206,16 +207,16 @@
     "    for entry in data:\n",
     "        print(f\"\\nTopic: {entry['topic']}\")\n",
     "        graph = Graph(entry[\"graph\"])\n",
-    "        \n",
+    "\n",
     "        # Sample dialogues\n",
     "        dialogues = sampler.invoke(graph, 1, -1)\n",
-    "        \n",
+    "\n",
     "        # Print all dialogues\n",
     "        for i, dialogue in enumerate(dialogues, 1):\n",
     "            print(f\"\\nDialogue {i}:\")\n",
     "            for message in dialogue.messages:\n",
     "                print(f\"- {message}\")\n",
-    "            \n",
+    "\n",
     "        print(\"-\" * 50)"
    ]
   },
@@ -271,77 +272,79 @@
    "source": [
     "from chatsky_llm_autoconfig.algorithms.dialogue_generation import DialogueSampler\n",
     "from chatsky_llm_autoconfig.graph import BaseGraph\n",
-    "from chatsky_llm_autoconfig.metrics.llm_metrics import are_triplets_valid\n",
-    "from langchain_openai import ChatOpenAI\n",
     "from pathlib import Path\n",
-    "import os\n",
     "import json\n",
-    "from datetime import datetime\n",
     "\n",
     "\n",
     "def check_existing_graphs_and_sample() -> None:\n",
-    "   sampler = DialogueSampler()\n",
-    "   \n",
-    "   valid_model = ChatOpenAI(\n",
-    "       model='gpt-4o',\n",
-    "       api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
-    "       base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
-    "   )\n",
-    "   \n",
-    "   # Path to the directory containing generated datasets\n",
-    "   datasets_dir = Path(\"graph_gen\")\n",
-    "   \n",
-    "   valid_results = []\n",
-    "   \n",
-    "   # Iterate through json files in the datasets directory\n",
-    "   for file_path in datasets_dir.glob(\"*.json\"):\n",
-    "       try:\n",
-    "           # Load existing graph array\n",
-    "           with open(file_path, 'r', encoding='utf-8') as f:\n",
-    "               graphs_data = json.load(f)\n",
-    "           \n",
-    "           print(f\"\\nProcessing graphs from: {file_path}\")\n",
-    "           \n",
-    "           # Process each graph in the array\n",
-    "           for graph_data in graphs_data:\n",
-    "               print(f\"\\nValidating graph with topic: {graph_data['topic']}\")\n",
-    "               \n",
-    "               graph_obj: BaseGraph = Graph(graph_data['graph'])\n",
+    "    sampler = DialogueSampler()\n",
     "\n",
-    "               # Validate triplets\n",
-    "               validation_result = are_triplets_valid(graph_obj, valid_model)\n",
-    "               print(f\"Validation result: {validation_result}\")\n",
-    "               \n",
-    "               \n",
-    "               if validation_result[\"value\"]:\n",
-    "                   sampled_dialogues = sampler.invoke(graph_obj, 1, -1)\n",
-    "                   valid_results.append({\n",
-    "                       \"graph\": graph_data['graph'],\n",
-    "                       \"topic\": graph_data['topic'],\n",
-    "                       \"dialogues\": [d.model_dump() for d in sampled_dialogues],\n",
-    "                       \"validation_result\": validation_result\n",
-    "                   })\n",
-    "                   print(f\"✅ Valid dialogue generated for topic: {graph_data['topic']}\")\n",
-    "               else:\n",
-    "                   print(f\"❌ Invalid dialogue for topic: {graph_data['topic']}\")\n",
-    "               \n",
-    "       except Exception as e:\n",
-    "           print(f\"Error processing {file_path}: {str(e)}\")\n",
-    "           continue\n",
+    "    valid_model = ChatOpenAI(\n",
+    "        model=\"gpt-4o\",\n",
+    "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "        base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "    )\n",
     "\n",
-    "   # Save results\n",
-    "   if valid_results:\n",
-    "       output_dir = Path(\"valid_complex_graphs\")\n",
-    "       output_dir.mkdir(exist_ok=True)\n",
-    "       \n",
-    "       output_file = output_dir / f\"valid_dialogues_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\"\n",
-    "       with open(output_file, 'w', encoding='utf-8') as f:\n",
-    "           json.dump(valid_results, f, ensure_ascii=False, indent=2)\n",
-    "       print(f\"\\nSaved {len(valid_results)} valid dialogues to: {output_file}\")\n",
+    "    # Path to the directory containing generated datasets\n",
+    "    datasets_dir = Path(\"graph_gen\")\n",
+    "\n",
+    "    valid_results = []\n",
+    "\n",
+    "    # Iterate through json files in the datasets directory\n",
+    "    for file_path in datasets_dir.glob(\"*.json\"):\n",
+    "        try:\n",
+    "            # Load existing graph array\n",
+    "            with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "                graphs_data = json.load(f)\n",
+    "\n",
+    "            print(f\"\\nProcessing graphs from: {file_path}\")\n",
+    "\n",
+    "            # Process each graph in the array\n",
+    "            for graph_data in graphs_data:\n",
+    "                print(f\"\\nValidating graph with topic: {graph_data['topic']}\")\n",
+    "\n",
+    "                graph_obj: BaseGraph = Graph(graph_data[\"graph\"])\n",
+    "\n",
+    "                # Validate triplets\n",
+    "                validation_result = are_triplets_valid(graph_obj, valid_model)\n",
+    "                print(f\"Validation result: {validation_result}\")\n",
+    "\n",
+    "                if validation_result[\"value\"]:\n",
+    "                    sampled_dialogues = sampler.invoke(graph_obj, 1, -1)\n",
+    "                    valid_results.append(\n",
+    "                        {\n",
+    "                            \"graph\": graph_data[\"graph\"],\n",
+    "                            \"topic\": graph_data[\"topic\"],\n",
+    "                            \"dialogues\": [d.model_dump() for d in sampled_dialogues],\n",
+    "                            \"validation_result\": validation_result,\n",
+    "                        }\n",
+    "                    )\n",
+    "                    print(\n",
+    "                        f\"✅ Valid dialogue generated for topic: {graph_data['topic']}\"\n",
+    "                    )\n",
+    "                else:\n",
+    "                    print(f\"❌ Invalid dialogue for topic: {graph_data['topic']}\")\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {file_path}: {str(e)}\")\n",
+    "            continue\n",
+    "\n",
+    "    # Save results\n",
+    "    if valid_results:\n",
+    "        output_dir = Path(\"valid_complex_graphs\")\n",
+    "        output_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "        output_file = (\n",
+    "            output_dir\n",
+    "            / f\"valid_dialogues_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\"\n",
+    "        )\n",
+    "        with open(output_file, \"w\", encoding=\"utf-8\") as f:\n",
+    "            json.dump(valid_results, f, ensure_ascii=False, indent=2)\n",
+    "        print(f\"\\nSaved {len(valid_results)} valid dialogues to: {output_file}\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "   check_existing_graphs_and_sample()"
+    "    check_existing_graphs_and_sample()"
    ]
   }
  ],
