--- a/experiments/old_experiments/2024.12.11_visualization/main.ipynb
+++ b/experiments/old_experiments/2024.12.11_visualization/main.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import json\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
-    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import DialoguePathSampler, DialogueSampler"
+    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import (\n",
+    "    DialoguePathSampler,\n",
+    ")"
    ]
   },
   {
@@ -25,7 +27,7 @@
     }
    ],
    "source": [
-    "with open('complex_graphs.json', encoding=\"utf-8\") as f:\n",
+    "with open(\"complex_graphs.json\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "print(len(data))"
    ]
@@ -47,7 +49,7 @@
     }
    ],
    "source": [
-    "g = Graph(graph_dict=data[-1]['graph'])\n",
+    "g = Graph(graph_dict=data[-1][\"graph\"])\n",
     "g.visualise()"
    ]
   },
@@ -114,7 +116,7 @@
     "print(len(dials))\n",
     "for i in dials:\n",
     "    print(i)\n",
-    "    print(\"------------\")\n"
+    "    print(\"------------\")"
    ]
   },
   {
