--- a/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/check_the_data.ipynb
+++ b/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/check_the_data.ipynb
@@ -26,7 +26,6 @@
     "from chatsky_llm_autoconfig.dialogue import Dialogue\n",
     "import chatsky_llm_autoconfig.metrics.automatic_metrics as auto_metrics\n",
     "import chatsky_llm_autoconfig.metrics.llm_metrics as llm_metrics\n",
-    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import DialoguePathSampler, DialogueSampler\n",
     "\n",
     "dotenv.load_dotenv()"
    ]
@@ -45,7 +44,7 @@
     }
    ],
    "source": [
-    "with open('data.json', encoding=\"utf-8\") as f:\n",
+    "with open(\"data.json\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "print(len(data))"
    ]
@@ -119,7 +118,7 @@
    ],
    "source": [
     "for case in tqdm(data):\n",
-    "    print(case['dialogues'])\n",
+    "    print(case[\"dialogues\"])\n",
     "    # dialogues=[Dialogue(messages=x['messages']) for x in case['dialogues']]"
    ]
   },
@@ -309,19 +308,24 @@
     "results = []\n",
     "for case in tqdm(data):\n",
     "    case_results = {\"topic\": case[\"topic\"]}\n",
-    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case['graph']), model=model)\n",
-    "    case_results[\"are_triplets_valid\"] = triplets['value']\n",
-    "    case_results['are_triplets_valid_details'] = triplets['description']\n",
-    "    themes = llm_metrics.is_theme_valid(G=Graph(case['graph']), topic=case['topic'], model=model)\n",
-    "    case_results['is_theme_valid'] = themes['value']\n",
-    "    case_results['is_theme_valid_details'] = themes['description']\n",
-    "    case_results['all_utterances_present'] = auto_metrics.all_utterances_present(G=Graph(case['graph']), dialogues=[Dialogue(messages=x['messages']) for x in case['dialogues']])\n",
+    "    triplets = llm_metrics.are_triplets_valid(G=Graph(case[\"graph\"]), model=model)\n",
+    "    case_results[\"are_triplets_valid\"] = triplets[\"value\"]\n",
+    "    case_results[\"are_triplets_valid_details\"] = triplets[\"description\"]\n",
+    "    themes = llm_metrics.is_theme_valid(\n",
+    "        G=Graph(case[\"graph\"]), topic=case[\"topic\"], model=model\n",
+    "    )\n",
+    "    case_results[\"is_theme_valid\"] = themes[\"value\"]\n",
+    "    case_results[\"is_theme_valid_details\"] = themes[\"description\"]\n",
+    "    case_results[\"all_utterances_present\"] = auto_metrics.all_utterances_present(\n",
+    "        G=Graph(case[\"graph\"]),\n",
+    "        dialogues=[Dialogue(messages=x[\"messages\"]) for x in case[\"dialogues\"]],\n",
+    "    )\n",
     "\n",
     "    results.append(case_results)\n",
     "\n",
     "df = pd.DataFrame(results)\n",
     "print(df)\n",
-    "df.to_csv('results.csv')"
+    "df.to_csv(\"results.csv\")"
    ]
   },
   {
