--- a/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/fix_sampler.ipynb
+++ b/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/fix_sampler.ipynb
@@ -26,16 +26,11 @@
    ],
    "source": [
     "import json\n",
-    "import pandas as pd\n",
     "import dotenv\n",
-    "from tqdm import tqdm\n",
-    "from langchain_openai import ChatOpenAI\n",
     "import networkx as nx\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
     "from chatsky_llm_autoconfig.dialogue import Dialogue\n",
     "import chatsky_llm_autoconfig.metrics.automatic_metrics as auto_metrics\n",
-    "import chatsky_llm_autoconfig.metrics.llm_metrics as llm_metrics\n",
-    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import DialoguePathSampler, DialogueSampler\n",
     "\n",
     "dotenv.load_dotenv()"
    ]
@@ -54,7 +49,7 @@
     }
    ],
    "source": [
-    "with open('data.json', encoding=\"utf-8\") as f:\n",
+    "with open(\"data.json\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "print(len(data))"
    ]
@@ -76,7 +71,7 @@
     }
    ],
    "source": [
-    "G = Graph(data[0]['graph'])\n",
+    "G = Graph(data[0][\"graph\"])\n",
     "G.visualise()"
    ]
   },
@@ -128,131 +123,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_json = {\"graph\": {\n",
-    "            \"nodes\": [\n",
-    "                {\n",
-    "                    \"id\": 1,\n",
-    "                    \"label\": \"welcome and ask\",\n",
-    "                    \"is_start\": True,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Hello! This is tech support. How can I help you today?\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"id\": 2,\n",
-    "                    \"label\": \"reload\",\n",
-    "                    \"is_start\": False,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Try to reload your device.\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"id\": 3,\n",
-    "                    \"label\": \"check if helped\",\n",
-    "                    \"is_start\": False,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Has this resolved the issue for you?\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"id\": 4,\n",
-    "                    \"label\": \"verification\",\n",
-    "                    \"is_start\": False,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Try cleaning browser cache.\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"id\": 5,\n",
-    "                    \"label\": \"ask about additional problem\",\n",
-    "                    \"is_start\": False,\n",
-    "                    \"utterances\": [\n",
-    "                        \"What is the other problem that you are experiencing?\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"id\": 6,\n",
-    "                    \"label\": \"solution for balance\",\n",
-    "                    \"is_start\": False,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Try logging out of the website and then re-logging in.\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"id\": 7,\n",
-    "                    \"label\": \"end\",\n",
-    "                    \"is_start\": False,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Thank you for contacting us, have a nice day.\"\n",
-    "                    ]\n",
-    "                }\n",
-    "            ],\n",
-    "            \"edges\": [\n",
-    "                {\n",
-    "                    \"source\": 1,\n",
-    "                    \"target\": 2,\n",
-    "                    \"utterances\": [\n",
-    "                        \"The website loading takes too long\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"source\": 2,\n",
-    "                    \"target\": 3,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Sure, I will try that\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"source\": 3,\n",
-    "                    \"target\": 4,\n",
-    "                    \"utterances\": [\n",
-    "                        \"No, it did not work \"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"source\": 4,\n",
-    "                    \"target\": 3,\n",
-    "                    \"utterances\": [\n",
-    "                        \"All right, I will try cleaning cache\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"source\": 3,\n",
-    "                    \"target\": 7,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Yes, that fixed everything\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"source\": 3,\n",
-    "                    \"target\": 5,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Actually, I'm having a different issue now\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"source\": 5,\n",
-    "                    \"target\": 6,\n",
-    "                    \"utterances\": [\n",
-    "                        \"I've put some money on my account but the balance is not updated on the website\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"source\": 6,\n",
-    "                    \"target\": 3,\n",
-    "                    \"utterances\": [\n",
-    "                        \"Ok, I will try to log out\"\n",
-    "                    ]\n",
-    "                },\n",
-    "                {\n",
-    "                    \"source\": 6,\n",
-    "                    \"target\": 2,\n",
-    "                    \"utterances\": [\n",
-    "                        \"The balance is updated but now the website is slow again\"\n",
-    "                    ]\n",
-    "                }\n",
-    "            ]\n",
-    "        }}"
+    "data_json = {\n",
+    "    \"graph\": {\n",
+    "        \"nodes\": [\n",
+    "            {\n",
+    "                \"id\": 1,\n",
+    "                \"label\": \"welcome and ask\",\n",
+    "                \"is_start\": True,\n",
+    "                \"utterances\": [\n",
+    "                    \"Hello! This is tech support. How can I help you today?\"\n",
+    "                ],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": 2,\n",
+    "                \"label\": \"reload\",\n",
+    "                \"is_start\": False,\n",
+    "                \"utterances\": [\"Try to reload your device.\"],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": 3,\n",
+    "                \"label\": \"check if helped\",\n",
+    "                \"is_start\": False,\n",
+    "                \"utterances\": [\"Has this resolved the issue for you?\"],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": 4,\n",
+    "                \"label\": \"verification\",\n",
+    "                \"is_start\": False,\n",
+    "                \"utterances\": [\"Try cleaning browser cache.\"],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": 5,\n",
+    "                \"label\": \"ask about additional problem\",\n",
+    "                \"is_start\": False,\n",
+    "                \"utterances\": [\"What is the other problem that you are experiencing?\"],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": 6,\n",
+    "                \"label\": \"solution for balance\",\n",
+    "                \"is_start\": False,\n",
+    "                \"utterances\": [\n",
+    "                    \"Try logging out of the website and then re-logging in.\"\n",
+    "                ],\n",
+    "            },\n",
+    "            {\n",
+    "                \"id\": 7,\n",
+    "                \"label\": \"end\",\n",
+    "                \"is_start\": False,\n",
+    "                \"utterances\": [\"Thank you for contacting us, have a nice day.\"],\n",
+    "            },\n",
+    "        ],\n",
+    "        \"edges\": [\n",
+    "            {\n",
+    "                \"source\": 1,\n",
+    "                \"target\": 2,\n",
+    "                \"utterances\": [\"The website loading takes too long\"],\n",
+    "            },\n",
+    "            {\"source\": 2, \"target\": 3, \"utterances\": [\"Sure, I will try that\"]},\n",
+    "            {\"source\": 3, \"target\": 4, \"utterances\": [\"No, it did not work \"]},\n",
+    "            {\n",
+    "                \"source\": 4,\n",
+    "                \"target\": 3,\n",
+    "                \"utterances\": [\"All right, I will try cleaning cache\"],\n",
+    "            },\n",
+    "            {\"source\": 3, \"target\": 7, \"utterances\": [\"Yes, that fixed everything\"]},\n",
+    "            {\n",
+    "                \"source\": 3,\n",
+    "                \"target\": 5,\n",
+    "                \"utterances\": [\"Actually, I'm having a different issue now\"],\n",
+    "            },\n",
+    "            {\n",
+    "                \"source\": 5,\n",
+    "                \"target\": 6,\n",
+    "                \"utterances\": [\n",
+    "                    \"I've put some money on my account but the balance is not updated on the website\"\n",
+    "                ],\n",
+    "            },\n",
+    "            {\"source\": 6, \"target\": 3, \"utterances\": [\"Ok, I will try to log out\"]},\n",
+    "            {\n",
+    "                \"source\": 6,\n",
+    "                \"target\": 2,\n",
+    "                \"utterances\": [\n",
+    "                    \"The balance is updated but now the website is slow again\"\n",
+    "                ],\n",
+    "            },\n",
+    "        ],\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -268,7 +225,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_utterances = set([x[0] for x in list(nx.get_node_attributes(G.graph, \"utterances\").values())] + [x[0] for x in list(nx.get_edge_attributes(G.graph, \"utterances\").values())])"
+    "all_utterances = set(\n",
+    "    [x[0] for x in list(nx.get_node_attributes(G.graph, \"utterances\").values())]\n",
+    "    + [x[0] for x in list(nx.get_edge_attributes(G.graph, \"utterances\").values())]\n",
+    ")"
    ]
   },
   {
@@ -315,11 +275,20 @@
     "dialogue = []\n",
     "for e in list(nx.edge_dfs(G.graph, 1)):\n",
     "    # print(\"assistant:\", G.graph.nodes[e[0]].get(\"utterances\")[0])\n",
-    "    dialogue.append({'participant': 'assistant', 'text': G.graph.nodes[e[0]].get(\"utterances\")[0]})\n",
+    "    dialogue.append(\n",
+    "        {\"participant\": \"assistant\", \"text\": G.graph.nodes[e[0]].get(\"utterances\")[0]}\n",
+    "    )\n",
     "    # print(\"user:\", G.graph.edges[e].get(\"utterances\")[0])\n",
-    "    dialogue.append({'participant': 'user', 'text': G.graph.edges[e].get(\"utterances\")[0]})\n",
+    "    dialogue.append(\n",
+    "        {\"participant\": \"user\", \"text\": G.graph.edges[e].get(\"utterances\")[0]}\n",
+    "    )\n",
     "    if list(G.graph.successors(e[1])) == []:\n",
-    "        dialogue.append({'participant': 'assistant', 'text': G.graph.nodes[e[1]].get(\"utterances\")[0]})\n",
+    "        dialogue.append(\n",
+    "            {\n",
+    "                \"participant\": \"assistant\",\n",
+    "                \"text\": G.graph.nodes[e[1]].get(\"utterances\")[0],\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "# print(*dialogue, sep=\"\\n\")\n",
     "d = Dialogue().from_list(dialogue, validate=False)"
