--- a/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/investigate_90_paths_from_one_graph.ipynb
+++ b/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/investigate_90_paths_from_one_graph.ipynb
@@ -17,9 +17,7 @@
    "source": [
     "import json\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
-    "from chatsky_llm_autoconfig.dialogue import Dialogue\n",
-    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import RecursiveDialogueSampler\n",
-    "import chatsky_llm_autoconfig.metrics.automatic_metrics as auto_metrics"
+    "from chatsky_llm_autoconfig.dialogue import Dialogue"
    ]
   },
   {
@@ -28,7 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/experiments/2025.01.13_data_check_and_sampler_debugging/graphs.json', encoding=\"utf-8\") as f:\n",
+    "with open(\n",
+    "    \"/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/experiments/2025.01.13_data_check_and_sampler_debugging/graphs.json\",\n",
+    "    encoding=\"utf-8\",\n",
+    ") as f:\n",
     "    data = json.load(f)"
    ]
   },
@@ -38,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = Graph(graph_dict=data[-1]['graph'])"
+    "g = Graph(graph_dict=data[-1][\"graph\"])"
    ]
   },
   {
