--- a/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/sampler.ipynb
+++ b/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/sampler.ipynb
@@ -18,7 +18,9 @@
     "import json\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
     "from chatsky_llm_autoconfig.dialogue import Dialogue\n",
-    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import RecursiveDialogueSampler\n",
+    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import (\n",
+    "    RecursiveDialogueSampler,\n",
+    ")\n",
     "import chatsky_llm_autoconfig.metrics.automatic_metrics as auto_metrics"
    ]
   },
@@ -38,7 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/experiments/2025.01.13_data_check_and_sampler_debugging/data.json', encoding=\"utf-8\") as f:\n",
+    "with open(\n",
+    "    \"/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/experiments/2025.01.13_data_check_and_sampler_debugging/data.json\",\n",
+    "    encoding=\"utf-8\",\n",
+    ") as f:\n",
     "    data = json.load(f)"
    ]
   },
@@ -67,7 +72,7 @@
    "source": [
     "sampler = RecursiveDialogueSampler()\n",
     "for i in data:\n",
-    "    gr = Graph(graph_dict=i['graph'])\n",
+    "    gr = Graph(graph_dict=i[\"graph\"])\n",
     "    dialogues = sampler.invoke(graph=gr)\n",
     "    # print(len(dialogues))\n",
     "    print(auto_metrics.all_utterances_present(gr, dialogues))"
@@ -122,7 +127,7 @@
     }
    ],
    "source": [
-    "graph_dict = data[1]['graph']\n",
+    "graph_dict = data[1][\"graph\"]\n",
     "graph_dict.get(\"nodes\")"
    ]
   },
@@ -186,7 +191,7 @@
    "outputs": [],
    "source": [
     "def list_in(a, b):\n",
-    "    return any(map(lambda x: b[x:x + len(a)] == a, range(len(b) - len(a) + 1)))"
+    "    return any(map(lambda x: b[x : x + len(a)] == a, range(len(b) - len(a) + 1)))"
    ]
   },
   {
@@ -197,15 +202,15 @@
    "source": [
     "visitedList = [[]]\n",
     "\n",
+    "\n",
     "def all_paths(graph: Graph, start: int, visited: list):\n",
     "    print(\"start: \", start, len(visitedList))\n",
-    "    if len(visited) < 2 or not list_in(visited[-2:]+[start],visited):\n",
+    "    if len(visited) < 2 or not list_in(visited[-2:] + [start], visited):\n",
     "        visited.append(start)\n",
     "        print(\"visited:\", visited)\n",
     "        for edge in graph.edge_by_source(start):\n",
-    "\n",
-    "        # if [start,edge['target']] not in visited:           \n",
-    "            all_paths(graph, edge['target'], visited.copy())\n",
+    "            # if [start,edge['target']] not in visited:\n",
+    "            all_paths(graph, edge[\"target\"], visited.copy())\n",
     "    visitedList.append(visited)"
    ]
   },
@@ -289,7 +294,7 @@
     }
    ],
    "source": [
-    "all_paths(gr, starts[0]['id'], [])\n",
+    "all_paths(gr, starts[0][\"id\"], [])\n",
     "\n",
     "print(visitedList)"
    ]
@@ -301,8 +306,9 @@
    "outputs": [],
    "source": [
     "import itertools\n",
+    "\n",
     "visitedList.sort()\n",
-    "final = list(k for k,_ in itertools.groupby(visitedList))[1:]"
+    "final = list(k for k, _ in itertools.groupby(visitedList))[1:]"
    ]
   },
   {
@@ -386,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sources = list(set([g['source'] for g in graph_dict['edges']]))"
+    "sources = list(set([g[\"source\"] for g in graph_dict[\"edges\"]]))"
    ]
   },
   {
@@ -406,7 +412,7 @@
     }
    ],
    "source": [
-    "ends = [g['id'] for g in graph_dict['nodes'] if g['id'] not in sources]\n",
+    "ends = [g[\"id\"] for g in graph_dict[\"nodes\"] if g[\"id\"] not in sources]\n",
     "ends"
    ]
   },
@@ -710,17 +716,21 @@
     "for p in node_paths:\n",
     "    print(p)\n",
     "    path = []\n",
-    "    for idx,s in enumerate(p[:-1]):\n",
-    "        path.append({\"participant\": \"assistant\", \"text\": gr.node_by_id(s)['utterances'][0]})\n",
+    "    for idx, s in enumerate(p[:-1]):\n",
+    "        path.append(\n",
+    "            {\"participant\": \"assistant\", \"text\": gr.node_by_id(s)[\"utterances\"][0]}\n",
+    "        )\n",
     "        # path.append({\"user\": list(set(gr.edge_by_source(s)) & set(gr.edge_by_target(p[idx+1])))[0]['utterances']})\n",
     "        sources = gr.edge_by_source(s)\n",
-    "        targets = gr.edge_by_target(p[idx+1])\n",
+    "        targets = gr.edge_by_target(p[idx + 1])\n",
     "        print(\"SOURCES: \", sources, s)\n",
-    "        print(\"TARGETS: \", targets, p[idx+1])\n",
+    "        print(\"TARGETS: \", targets, p[idx + 1])\n",
     "        # targets = set([(e['source'],e['target']) for e in gr.edge_by_target(p[idx+1])])\n",
     "        edge = [e for e in sources if e in targets][0]\n",
-    "        path.append(({\"participant\": \"user\", \"text\": edge['utterances'][0]}))\n",
-    "    path.append({\"participant\": \"assistant\", \"text\": gr.node_by_id(p[-1])['utterances'][0]})\n",
+    "        path.append(({\"participant\": \"user\", \"text\": edge[\"utterances\"][0]}))\n",
+    "    path.append(\n",
+    "        {\"participant\": \"assistant\", \"text\": gr.node_by_id(p[-1])[\"utterances\"][0]}\n",
+    "    )\n",
     "    full_paths.append(path)\n",
     "full_paths"
    ]
