--- a/experiments/old_experiments/2025.01.20_data_generation_pipeline/get_some_data.ipynb
+++ b/experiments/old_experiments/2025.01.20_data_generation_pipeline/get_some_data.ipynb
@@ -18,7 +18,9 @@
     "import json\n",
     "from chatsky_llm_autoconfig.dialogue import Dialogue\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
-    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import RecursiveDialogueSampler"
+    "from chatsky_llm_autoconfig.algorithms.dialogue_generation import (\n",
+    "    RecursiveDialogueSampler,\n",
+    ")"
    ]
   },
   {
@@ -27,7 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/experiments/2025.01.20_data_generation_pipeline/generated_graphs/generated_graphs_20250125_113113.json') as f:\n",
+    "with open(\n",
+    "    \"/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/experiments/2025.01.20_data_generation_pipeline/generated_graphs/generated_graphs_20250125_113113.json\"\n",
+    ") as f:\n",
     "    data = json.load(f)"
    ]
   },
@@ -37,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = Graph(graph_dict=data[0]['graph'])"
+    "g = Graph(graph_dict=data[0][\"graph\"])"
    ]
   },
   {
@@ -68,65 +72,78 @@
    "source": [
     "import itertools\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
-    "from chatsky_llm_autoconfig.dialogue import Dialogue\n",
     "from chatsky_llm_autoconfig.metrics.automatic_metrics import all_utterances_present\n",
     "\n",
+    "\n",
     "def list_in(a, b):\n",
-    "    return any(map(lambda x: b[x:x + len(a)] == a, range(len(b) - len(a) + 1)))\n",
+    "    return any(map(lambda x: b[x : x + len(a)] == a, range(len(b) - len(a) + 1)))\n",
+    "\n",
     "\n",
     "def all_paths(graph: Graph, start: int, visited: list, repeats: int):\n",
-    "    global visited_list   \n",
-    "    if len(visited) < repeats or not list_in(visited[-repeats:]+[start],visited):\n",
+    "    global visited_list\n",
+    "    if len(visited) < repeats or not list_in(visited[-repeats:] + [start], visited):\n",
     "        visited.append(start)\n",
     "        for edge in graph.edge_by_source(start):\n",
-    "            all_paths(graph, edge['target'], visited.copy(), repeats)\n",
+    "            all_paths(graph, edge[\"target\"], visited.copy(), repeats)\n",
     "    visited_list.append(visited)\n",
+    "\n",
     "\n",
     "def all_combinations(path: list, start: dict, next: int, visited: list):\n",
     "    global visited_list\n",
     "    visited.append(start)\n",
     "    if next < len(path):\n",
-    "        for utt in path[next]['text']:\n",
-    "            all_combinations(path, {\"participant\": path[next]['participant'], \"text\": utt}, next+1, visited.copy())\n",
+    "        for utt in path[next][\"text\"]:\n",
+    "            all_combinations(\n",
+    "                path,\n",
+    "                {\"participant\": path[next][\"participant\"], \"text\": utt},\n",
+    "                next + 1,\n",
+    "                visited.copy(),\n",
+    "            )\n",
     "    visited_list.append(visited)\n",
+    "\n",
     "\n",
     "def get_edges(dialogues: list[list[int]]) -> set[tuple]:\n",
     "    pairs = []\n",
     "    for dialogue in dialogues:\n",
-    "        for idx,n in enumerate(dialogue[:-1]):\n",
-    "            pairs.append((n,dialogue[idx+1]))\n",
+    "        for idx, n in enumerate(dialogue[:-1]):\n",
+    "            pairs.append((n, dialogue[idx + 1]))\n",
     "    return set(pairs)\n",
+    "\n",
     "\n",
     "def edges_in(dialogue: list[int], dialogues: list[list[int]]) -> bool:\n",
     "    return get_edges([dialogue]).issubset(get_edges(dialogues))\n",
+    "\n",
     "\n",
     "def remove_duplicates(dialogues: list[list[int]]) -> list[list[int]]:\n",
     "    ds_copy = dialogues.copy()\n",
     "    idx = 0\n",
     "    for dialogue in dialogues:\n",
-    "        if edges_in(dialogue, ds_copy[:idx]+ds_copy[idx+1:]):\n",
-    "            ds_copy = ds_copy[:idx]+ds_copy[idx+1:]\n",
+    "        if edges_in(dialogue, ds_copy[:idx] + ds_copy[idx + 1 :]):\n",
+    "            ds_copy = ds_copy[:idx] + ds_copy[idx + 1 :]\n",
     "        else:\n",
     "            idx += 1\n",
     "    return ds_copy\n",
     "\n",
+    "\n",
     "def get_utts(seq: list[list[dict]]) -> set[tuple[str]]:\n",
     "    res = []\n",
     "    for dialogue in seq:\n",
-    "         user_texts = [d['text'] for d in dialogue if d['participant']=='user']\n",
-    "         assist_texts = [d['text'] for d in dialogue if d['participant']=='assistant']\n",
-    "         res.extend([(a,u) for u,a in zip(user_texts,assist_texts)])\n",
+    "        user_texts = [d[\"text\"] for d in dialogue if d[\"participant\"] == \"user\"]\n",
+    "        assist_texts = [d[\"text\"] for d in dialogue if d[\"participant\"] == \"assistant\"]\n",
+    "        res.extend([(a, u) for u, a in zip(user_texts, assist_texts)])\n",
     "    return set(res)\n",
+    "\n",
     "\n",
     "def remove_duplicated_utts(seq: list[list[dict]]):\n",
     "    seq_copy = seq.copy()\n",
     "    idx = 0\n",
     "    for s in seq:\n",
-    "        if get_utts([s]).issubset(get_utts(seq_copy[:idx]+seq_copy[idx+1:])):\n",
-    "            seq_copy = seq_copy[:idx]+seq_copy[idx+1:]\n",
+    "        if get_utts([s]).issubset(get_utts(seq_copy[:idx] + seq_copy[idx + 1 :])):\n",
+    "            seq_copy = seq_copy[:idx] + seq_copy[idx + 1 :]\n",
     "        else:\n",
     "            idx += 1\n",
     "    return seq_copy\n",
+    "\n",
     "\n",
     "def get_dialogues(graph: Graph, repeats: int) -> list[Dialogue]:\n",
     "    global visited_list\n",
@@ -134,13 +151,13 @@
     "    starts = [n for n in graph.graph_dict.get(\"nodes\") if n[\"is_start\"]]\n",
     "    for s in starts:\n",
     "        visited_list = [[]]\n",
-    "        all_paths(graph, s['id'], [], repeats)\n",
+    "        all_paths(graph, s[\"id\"], [], repeats)\n",
     "        paths.extend(visited_list)\n",
     "\n",
     "    paths.sort()\n",
-    "    final = list(k for k,_ in itertools.groupby(paths))[1:]\n",
-    "    final.sort(key=len,reverse=True)\n",
-    "    sources = list(set([g['source'] for g in graph.graph_dict['edges']]))\n",
+    "    final = list(k for k, _ in itertools.groupby(paths))[1:]\n",
+    "    final.sort(key=len, reverse=True)\n",
+    "    sources = list(set([g[\"source\"] for g in graph.graph_dict[\"edges\"]]))\n",
     "    # ends = [g['id'] for g in graph.graph_dict['nodes'] if g['id'] not in sources]\n",
     "    # node_paths = [f for f in final if f[-1] in ends]\n",
     "    node_paths = remove_duplicates(final)\n",
@@ -148,31 +165,36 @@
     "    full_paths = []\n",
     "    for p in node_paths:\n",
     "        path = []\n",
-    "        for idx,s in enumerate(p[:-1]):\n",
-    "            path.append({\"participant\": \"assistant\", \"text\": graph.node_by_id(s)['utterances']})\n",
+    "        for idx, s in enumerate(p[:-1]):\n",
+    "            path.append(\n",
+    "                {\"participant\": \"assistant\", \"text\": graph.node_by_id(s)[\"utterances\"]}\n",
+    "            )\n",
     "            sources = graph.edge_by_source(s)\n",
-    "            targets = graph.edge_by_target(p[idx+1])\n",
+    "            targets = graph.edge_by_target(p[idx + 1])\n",
     "            edge = [e for e in sources if e in targets][0]\n",
-    "            path.append(({\"participant\": \"user\", \"text\": edge['utterances']}))\n",
-    "        path.append({\"participant\": \"assistant\", \"text\": graph.node_by_id(p[-1])['utterances']})\n",
+    "            path.append(({\"participant\": \"user\", \"text\": edge[\"utterances\"]}))\n",
+    "        path.append(\n",
+    "            {\"participant\": \"assistant\", \"text\": graph.node_by_id(p[-1])[\"utterances\"]}\n",
+    "        )\n",
     "        full_paths.append(path)\n",
     "    dialogues = []\n",
     "    for f in full_paths:\n",
     "        visited_list = [[]]\n",
     "        all_combinations(f, {}, 0, [])\n",
-    "        dialogue = [el[1:] for el in visited_list if len(el)==len(f)+1]\n",
+    "        dialogue = [el[1:] for el in visited_list if len(el) == len(f) + 1]\n",
     "        dialogues.extend(dialogue)\n",
-    "    final = list(k for k,_ in itertools.groupby(dialogues))\n",
+    "    final = list(k for k, _ in itertools.groupby(dialogues))\n",
     "    final = remove_duplicated_utts(final)\n",
     "    result = [Dialogue.from_list(seq) for seq in final]\n",
     "    return result\n",
     "\n",
+    "\n",
     "def get_full_dialogues(graph: Graph, upper_limit: int):\n",
     "    repeats = 1\n",
     "    while repeats <= upper_limit:\n",
-    "        dialogues = get_dialogues(graph,repeats)\n",
+    "        dialogues = get_dialogues(graph, repeats)\n",
     "        if all_utterances_present(graph, dialogues):\n",
-    "            print(f\"{repeats} repeats works!\")            \n",
+    "            print(f\"{repeats} repeats works!\")\n",
     "            break\n",
     "        repeats += 1\n",
     "    if repeats >= upper_limit:\n",
@@ -195,10 +217,15 @@
    ],
    "source": [
     "s = RecursiveDialogueSampler()\n",
-    "with open('graph.json', 'w') as f:\n",
-    "    json.dump({\"graph\": data[0]['graph'],\n",
-    "               \"topic\": data[0]['topic'],\n",
-    "               \"dialogues\": [x.to_list() for x in s.invoke(g, 10)]}, f)"
+    "with open(\"graph.json\", \"w\") as f:\n",
+    "    json.dump(\n",
+    "        {\n",
+    "            \"graph\": data[0][\"graph\"],\n",
+    "            \"topic\": data[0][\"topic\"],\n",
+    "            \"dialogues\": [x.to_list() for x in s.invoke(g, 10)],\n",
+    "        },\n",
+    "        f,\n",
+    "    )"
    ]
   },
   {
@@ -254,7 +281,7 @@
     }
    ],
    "source": [
-    "with open(\"dialogues.txt\", 'w') as f:\n",
+    "with open(\"dialogues.txt\", \"w\") as f:\n",
     "    for d in get_full_dialogues(g, 10):\n",
     "        f.write(str(d))\n",
     "        f.write(\"\\n\\n-----------------------------------\\n\\n\")"
