--- a/experiments/old_experiments/2025.01.28_find_ends/find_ends.ipynb
+++ b/experiments/old_experiments/2025.01.28_find_ends/find_ends.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai  import ChatOpenAI"
+    "from langchain_openai import ChatOpenAI"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import chatsky_llm_autoconfig.metrics.llm_metrics as llm_metrics\n"
+    "import chatsky_llm_autoconfig.metrics.llm_metrics as llm_metrics"
    ]
   },
   {
@@ -162,17 +162,16 @@
     "dialogue_results = []\n",
     "acc = 0\n",
     "for case in tqdm(data):\n",
-    "\n",
     "    case_results = {\"topic\": case[\"topic\"]}\n",
     "    graph = Graph(case[\"graph\"])\n",
     "    ends = llm_metrics.find_graph_ends(graph, model=model)\n",
-    "    res = ends['value']\n",
+    "    res = ends[\"value\"]\n",
     "    res.sort()\n",
     "    case_results[\"graph_ends\"] = res\n",
     "    acc += case[\"ends\"] == res\n",
-    "    case_results['graph_ends_details'] = ends['description']\n",
+    "    case_results[\"graph_ends_details\"] = ends[\"description\"]\n",
     "    dialogue_results.append(case_results)\n",
-    "print(\"Accuracy: \", round(acc/len(data),2))\n"
+    "print(\"Accuracy: \", round(acc / len(data), 2))"
    ]
   },
   {
@@ -227,17 +226,16 @@
     "dialogue_results = []\n",
     "acc = 0\n",
     "for case in tqdm(data):\n",
-    "\n",
     "    case_results = {\"topic\": case[\"topic\"]}\n",
     "    graph = Graph(case[\"graph\"])\n",
     "    ends = llm_metrics.find_graph_ends(graph, model=model)\n",
-    "    res = ends['value']\n",
+    "    res = ends[\"value\"]\n",
     "    res.sort()\n",
     "    case_results[\"graph_ends\"] = res\n",
     "    acc += case[\"ends\"] == res\n",
-    "    case_results['graph_ends_details'] = ends['description']\n",
+    "    case_results[\"graph_ends_details\"] = ends[\"description\"]\n",
     "    dialogue_results.append(case_results)\n",
-    "print(\"Accuracy: \", round(acc/len(data),2))"
+    "print(\"Accuracy: \", round(acc / len(data), 2))"
    ]
   },
   {
@@ -292,17 +290,16 @@
     "dialogue_results = []\n",
     "acc = 0\n",
     "for case in tqdm(data):\n",
-    "\n",
     "    case_results = {\"topic\": case[\"topic\"]}\n",
     "    graph = Graph(case[\"graph\"])\n",
     "    ends = llm_metrics.find_graph_ends(graph, model=model)\n",
-    "    res = ends['value']\n",
+    "    res = ends[\"value\"]\n",
     "    res.sort()\n",
     "    case_results[\"graph_ends\"] = res\n",
     "    acc += case[\"ends\"] == res\n",
-    "    case_results['graph_ends_details'] = ends['description']\n",
+    "    case_results[\"graph_ends_details\"] = ends[\"description\"]\n",
     "    dialogue_results.append(case_results)\n",
-    "print(\"Accuracy: \", round(acc/len(data),2))"
+    "print(\"Accuracy: \", round(acc / len(data), 2))"
    ]
   },
   {
