--- a/experiments/old_experiments/exp20250207_three_stages_plus/graph_generation.ipynb
+++ b/experiments/old_experiments/exp20250207_three_stages_plus/graph_generation.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import logging\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain_openai  import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
     "from langchain.output_parsers import PydanticOutputParser\n",
     "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
     "from chatsky_llm_autoconfig.algorithms.base import GraphGenerator\n",
@@ -54,33 +54,60 @@
     "    3. If one of dialogues ends with user's utterance, ask LLM to add missing edges.\n",
     "    \"\"\"\n",
     "\n",
-    "    def invoke(self, dialogue: list[Dialogue] = None, graph: DialogueGraph = None, topic: str = \"\") -> BaseGraph:\n",
-    "\n",
-    "        base_model = ChatOpenAI(model=env_settings.GENERATION_MODEL_NAME, api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL, temperature=1)\n",
+    "    def invoke(\n",
+    "        self,\n",
+    "        dialogue: list[Dialogue] = None,\n",
+    "        graph: DialogueGraph = None,\n",
+    "        topic: str = \"\",\n",
+    "    ) -> BaseGraph:\n",
+    "        base_model = ChatOpenAI(\n",
+    "            model=env_settings.GENERATION_MODEL_NAME,\n",
+    "            api_key=env_settings.OPENAI_API_KEY,\n",
+    "            base_url=env_settings.OPENAI_BASE_URL,\n",
+    "            temperature=1,\n",
+    "        )\n",
     "        nexts, nodes, starts, neigbhours, last_user = dialogues2list(dialogue)\n",
     "\n",
-    "        groups = nodes2groups(nodes, [\" \".join(p) for p in nexts], [n+ \" \".join(p) + \" \" for p,n in zip(nexts, nodes)], neigbhours)\n",
+    "        groups = nodes2groups(\n",
+    "            nodes,\n",
+    "            [\" \".join(p) for p in nexts],\n",
+    "            [n + \" \".join(p) + \" \" for p, n in zip(nexts, nodes)],\n",
+    "            neigbhours,\n",
+    "        )\n",
     "        nodes = []\n",
     "        for idx, group in enumerate(groups):\n",
     "            if any([gr in starts for gr in group]):\n",
     "                start = True\n",
     "            else:\n",
     "                start = False\n",
-    "            nodes.append({\"id\":idx+1, \"label\": \"\", \"is_start\": start, \"utterances\": group})\n",
+    "            nodes.append(\n",
+    "                {\"id\": idx + 1, \"label\": \"\", \"is_start\": start, \"utterances\": group}\n",
+    "            )\n",
     "\n",
-    "        embeddings = HuggingFaceEmbeddings(model_name=env_settings.EMBEDDER_MODEL, model_kwargs={\"device\": env_settings.EMBEDDER_DEVICE})\n",
+    "        embeddings = HuggingFaceEmbeddings(\n",
+    "            model_name=env_settings.EMBEDDER_MODEL,\n",
+    "            model_kwargs={\"device\": env_settings.EMBEDDER_DEVICE},\n",
+    "        )\n",
     "        graph_dict = nodes2graph(nodes, dialogue, embeddings)\n",
-    "        graph_dict = {\"nodes\": graph_dict['nodes'], \"edges\": graph_dict['edges'], \"reason\": \"\"}\n",
+    "        graph_dict = {\n",
+    "            \"nodes\": graph_dict[\"nodes\"],\n",
+    "            \"edges\": graph_dict[\"edges\"],\n",
+    "            \"reason\": \"\",\n",
+    "        }\n",
     "\n",
     "        if not last_user:\n",
     "            result_graph = Graph(graph_dict=graph_dict)\n",
-    "            return result_graph    \n",
+    "            return result_graph\n",
     "        partial_variables = {}\n",
     "        prompt_extra = \"\"\n",
     "        for idx, dial in enumerate(dialogue):\n",
     "            partial_variables[f\"var_{idx}\"] = dial.to_list()\n",
     "            prompt_extra += f\" Dialogue_{idx}: {{var_{idx}}}\"\n",
-    "        prompt = PromptTemplate(template=three_1+\"{graph_dict}. \"+three_2+prompt_extra, input_variables=[\"graph_dict\"], partial_variables=partial_variables)\n",
+    "        prompt = PromptTemplate(\n",
+    "            template=three_1 + \"{graph_dict}. \" + three_2 + prompt_extra,\n",
+    "            input_variables=[\"graph_dict\"],\n",
+    "            partial_variables=partial_variables,\n",
+    "        )\n",
     "\n",
     "        model = base_model | PydanticOutputParser(pydantic_object=DialogueGraph)\n",
     "\n",
@@ -88,14 +115,14 @@
     "        if result is None:\n",
     "            return Graph(graph_dict={})\n",
     "        result.reason = \"Fixes: \" + result.reason\n",
-    "        graph_dict=result.model_dump()\n",
-    "        if not all([e['target'] for e in graph_dict['edges']]):\n",
+    "        graph_dict = result.model_dump()\n",
+    "        if not all([e[\"target\"] for e in graph_dict[\"edges\"]]):\n",
     "            return Graph(graph_dict={})\n",
     "        result_graph = Graph(graph_dict=graph_dict)\n",
     "        return result_graph\n",
     "\n",
     "    async def ainvoke(self, *args, **kwargs):\n",
-    "        return self.invoke(*args, **kwargs)\n"
+    "        return self.invoke(*args, **kwargs)"
    ]
   },
   {
@@ -123,7 +150,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_graph = graph_generator.invoke([Dialogue.from_list(c[\"messages\"]) for c in case[\"dialogues\"]])"
+    "result_graph = graph_generator.invoke(\n",
+    "    [Dialogue.from_list(c[\"messages\"]) for c in case[\"dialogues\"]]\n",
+    ")"
    ]
   },
   {
@@ -280,7 +309,7 @@
     }
    ],
    "source": [
-    "llm_match(Graph(case['graph']),result_graph)"
+    "llm_match(Graph(case[\"graph\"]), result_graph)"
    ]
   }
  ],
