--- a/examples/basics/basic_usage.ipynb
+++ b/examples/basics/basic_usage.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "from dialogue2graph import Graph, Dialogue\n",
+    "from dialogue2graph import Graph\n",
     "from dialogue2graph.pipelines.core.dialogue_sampling import RecursiveDialogueSampler"
    ]
   },
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = Graph(graph_dict=data[0]['graph'])"
+    "graph = Graph(graph_dict=data[0][\"graph\"])"
    ]
   },
   {
