--- a/experiments/old_experiments/2024.11.22_cycle_dialogue_generation_improvement/cycle_dialogue_generation_improvement.ipynb
+++ b/experiments/old_experiments/2024.11.22_cycle_dialogue_generation_improvement/cycle_dialogue_generation_improvement.ipynb
@@ -20,7 +20,8 @@
     "from langchain_openai import ChatOpenAI\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "load_dotenv() "
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -39,7 +40,7 @@
     "from langchain.prompts import PromptTemplate\n",
     "\n",
     "cycle_graph_generation_prompt = PromptTemplate.from_template(\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Create a natural dialogue graph that represents any business conversation with logical cycles.\n",
     "\n",
     "    Here's an example of a clothing store conversation flow:\n",
@@ -88,7 +89,7 @@
     "\n",
     "    Create a dialogue graph for topic: {topic}\n",
     "    Return only valid JSON matching the format above.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     ")"
    ]
   },
@@ -193,66 +194,63 @@
     "from chatsky_llm_autoconfig.algorithms.topic_graph_generation import CycleGraphGenerator\n",
     "from chatsky_llm_autoconfig.metrics.llm_metrics import are_triplets_valid\n",
     "from typing import List, Dict, Any\n",
-    "import os\n",
-    "import json\n",
-    "from datetime import datetime\n",
-    "from pathlib import Path\n",
+    "\n",
     "\n",
     "def generate_dialogues(\n",
-    "    topics: List[str], \n",
+    "    topics: List[str],\n",
     ") -> List[Dict[str, Any]]:\n",
-    "\n",
     "    # Initialize components\n",
     "    graph_generator = CycleGraphGenerator(prompt=cycle_graph_generation_prompt)\n",
     "    sampler = DialogueSampler()\n",
-    "    \n",
+    "\n",
     "    model = ChatOpenAI(\n",
-    "        model='gpt-4o', \n",
-    "        api_key=os.getenv(\"OPENAI_API_KEY\"), \n",
-    "        base_url=os.getenv(\"OPENAI_BASE_URL\"), \n",
-    "        temperature=0\n",
+    "        model=\"gpt-4o\",\n",
+    "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "        base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "        temperature=0,\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    results = []\n",
-    "    \n",
+    "\n",
     "    for topic in topics:\n",
     "        # Generate graph and validate\n",
     "        graph = graph_generator.invoke(topic=topic)\n",
     "        is_valid = are_triplets_valid(graph, model, topic)\n",
-    "        \n",
+    "\n",
     "        if is_valid[\"value\"]:\n",
     "            print(f\"Graph: {graph}\")\n",
     "            sampled_dialogue = sampler.invoke(graph, 1, -1)[0]\n",
-    "            \n",
+    "\n",
     "            print(f\"Sampled dialogue: {sampled_dialogue}\")\n",
-    "            \n",
+    "\n",
     "            # Initialize dialogues array with the sampled dialogue\n",
     "            dialogues = [sampled_dialogue.model_dump()]\n",
-    "        \n",
+    "\n",
     "            result_entry = {\n",
     "                \"graph\": graph.graph_dict,\n",
     "                \"topic\": topic,\n",
-    "                \"dialogues\": dialogues\n",
+    "                \"dialogues\": dialogues,\n",
     "            }\n",
-    "            \n",
+    "\n",
     "            results.append(result_entry)\n",
-    "            \n",
+    "\n",
     "    return results\n",
     "\n",
+    "\n",
     "topics = [\n",
-    "#    \"restaurant table reservation\",\n",
-    "#    \"tech support troubleshooting\",\n",
-    "#    \"hotel room booking\", \n",
-    "#    \"car service appointment\",\n",
-    "#    \"flight ticket booking\",\n",
-    "   \"gym membership registration\",\n",
-    "   \"real estate property viewing\",\n",
-    "   \"insurance policy purchase\",\n",
-    "   \"beauty salon appointment\",\n",
-    "#    \"bank account opening\"\n",
+    "    #    \"restaurant table reservation\",\n",
+    "    #    \"tech support troubleshooting\",\n",
+    "    #    \"hotel room booking\",\n",
+    "    #    \"car service appointment\",\n",
+    "    #    \"flight ticket booking\",\n",
+    "    \"gym membership registration\",\n",
+    "    \"real estate property viewing\",\n",
+    "    \"insurance policy purchase\",\n",
+    "    \"beauty salon appointment\",\n",
+    "    #    \"bank account opening\"\n",
     "]\n",
     "\n",
-    "dialogue_collection = generate_dialogues(topics)\n"
+    "dialogue_collection = generate_dialogues(topics)"
    ]
   },
   {
