--- a/examples/pipeline_usage/pipeline_example.ipynb
+++ b/examples/pipeline_usage/pipeline_example.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
     "ms.add(\n",
     "    \"my_model\",\n",
     "    config={\n",
-    "        \"name\": \"gpt-3.5-turbo\"\n",
+    "        \"model\": \"gpt-3.5-turbo\"\n",
     "    },\n",
     "    model_type=\"llm\",\n",
     ")\n",
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
